@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2012, 2021, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2012, 2024, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -25,26 +25,19 @@
 
 package sun.util.locale.provider;
 
-import java.security.AccessController;
-import java.security.AccessControlException;
-import java.security.PrivilegedAction;
-import java.security.PrivilegedActionException;
-import java.security.PrivilegedExceptionAction;
 import java.text.spi.BreakIteratorProvider;
 import java.text.spi.CollatorProvider;
 import java.text.spi.DateFormatProvider;
 import java.text.spi.DateFormatSymbolsProvider;
 import java.text.spi.DecimalFormatSymbolsProvider;
 import java.text.spi.NumberFormatProvider;
+import java.util.Arrays;
 import java.util.Collections;
-import java.util.HashSet;
 import java.util.List;
 import java.util.Locale;
 import java.util.ResourceBundle;
 import java.util.ServiceLoader;
-import java.util.ServiceConfigurationError;
 import java.util.Set;
-import java.util.StringTokenizer;
 import java.util.concurrent.ConcurrentHashMap;
 import java.util.concurrent.ConcurrentMap;
 import java.util.spi.CalendarDataProvider;
@@ -142,12 +135,9 @@ public class JRELocaleProviderAdapter extends LocaleProviderAdapter implements R
     @Override
     public BreakIteratorProvider getBreakIteratorProvider() {
         if (breakIteratorProvider == null) {
-            @SuppressWarnings("removal")
-            BreakIteratorProvider provider = AccessController.doPrivileged(
-                (PrivilegedAction<BreakIteratorProvider>) () ->
-                    new BreakIteratorProviderImpl(
-                        getAdapterType(),
-                        getLanguageTagSet("FormatData")));
+            BreakIteratorProvider provider = new BreakIteratorProviderImpl(
+                    getAdapterType(),
+                    getLanguageTagSet("FormatData"));
 
             synchronized (this) {
                 if (breakIteratorProvider == null) {
@@ -161,12 +151,9 @@ public class JRELocaleProviderAdapter extends LocaleProviderAdapter implements R
     @Override
     public CollatorProvider getCollatorProvider() {
         if (collatorProvider == null) {
-            @SuppressWarnings("removal")
-            CollatorProvider provider = AccessController.doPrivileged(
-                (PrivilegedAction<CollatorProvider>) () ->
-                    new CollatorProviderImpl(
-                        getAdapterType(),
-                        getLanguageTagSet("CollationData")));
+            CollatorProvider provider = new CollatorProviderImpl(
+                    getAdapterType(),
+                    getLanguageTagSet("CollationData"));
 
             synchronized (this) {
                 if (collatorProvider == null) {
@@ -180,12 +167,9 @@ public class JRELocaleProviderAdapter extends LocaleProviderAdapter implements R
     @Override
     public DateFormatProvider getDateFormatProvider() {
         if (dateFormatProvider == null) {
-            @SuppressWarnings("removal")
-            DateFormatProvider provider = AccessController.doPrivileged(
-                (PrivilegedAction<DateFormatProvider>) () ->
-                    new DateFormatProviderImpl(
-                        getAdapterType(),
-                        getLanguageTagSet("FormatData")));
+            DateFormatProvider provider = new DateFormatProviderImpl(
+                    getAdapterType(),
+                    getLanguageTagSet("FormatData"));
 
             synchronized (this) {
                 if (dateFormatProvider == null) {
@@ -199,12 +183,9 @@ public class JRELocaleProviderAdapter extends LocaleProviderAdapter implements R
     @Override
     public DateFormatSymbolsProvider getDateFormatSymbolsProvider() {
         if (dateFormatSymbolsProvider == null) {
-            @SuppressWarnings("removal")
-            DateFormatSymbolsProvider provider = AccessController.doPrivileged(
-                (PrivilegedAction<DateFormatSymbolsProvider>) () ->
-                    new DateFormatSymbolsProviderImpl(
-                        getAdapterType(),
-                        getLanguageTagSet("FormatData")));
+            DateFormatSymbolsProvider provider = new DateFormatSymbolsProviderImpl(
+                    getAdapterType(),
+                    getLanguageTagSet("FormatData"));
 
             synchronized (this) {
                 if (dateFormatSymbolsProvider == null) {
@@ -218,12 +199,9 @@ public class JRELocaleProviderAdapter extends LocaleProviderAdapter implements R
     @Override
     public DecimalFormatSymbolsProvider getDecimalFormatSymbolsProvider() {
         if (decimalFormatSymbolsProvider == null) {
-            @SuppressWarnings("removal")
-            DecimalFormatSymbolsProvider provider = AccessController.doPrivileged(
-                (PrivilegedAction<DecimalFormatSymbolsProvider>) () ->
-                    new DecimalFormatSymbolsProviderImpl(
-                        getAdapterType(),
-                        getLanguageTagSet("FormatData")));
+            DecimalFormatSymbolsProvider provider = new DecimalFormatSymbolsProviderImpl(
+                    getAdapterType(),
+                    getLanguageTagSet("FormatData"));
 
             synchronized (this) {
                 if (decimalFormatSymbolsProvider == null) {
@@ -237,12 +215,9 @@ public class JRELocaleProviderAdapter extends LocaleProviderAdapter implements R
     @Override
     public NumberFormatProvider getNumberFormatProvider() {
         if (numberFormatProvider == null) {
-            @SuppressWarnings("removal")
-            NumberFormatProvider provider = AccessController.doPrivileged(
-                (PrivilegedAction<NumberFormatProvider>) () ->
-                    new NumberFormatProviderImpl(
+            NumberFormatProvider provider = new NumberFormatProviderImpl(
                         getAdapterType(),
-                        getLanguageTagSet("FormatData")));
+                        getLanguageTagSet("FormatData"));
 
             synchronized (this) {
                 if (numberFormatProvider == null) {
@@ -259,12 +234,9 @@ public class JRELocaleProviderAdapter extends LocaleProviderAdapter implements R
     @Override
     public CurrencyNameProvider getCurrencyNameProvider() {
         if (currencyNameProvider == null) {
-            @SuppressWarnings("removal")
-            CurrencyNameProvider provider = AccessController.doPrivileged(
-                (PrivilegedAction<CurrencyNameProvider>) () ->
-                    new CurrencyNameProviderImpl(
+            CurrencyNameProvider provider = new CurrencyNameProviderImpl(
                         getAdapterType(),
-                        getLanguageTagSet("CurrencyNames")));
+                        getLanguageTagSet("CurrencyNames"));
 
             synchronized (this) {
                 if (currencyNameProvider == null) {
@@ -278,12 +250,9 @@ public class JRELocaleProviderAdapter extends LocaleProviderAdapter implements R
     @Override
     public LocaleNameProvider getLocaleNameProvider() {
         if (localeNameProvider == null) {
-            @SuppressWarnings("removal")
-            LocaleNameProvider provider = AccessController.doPrivileged(
-                (PrivilegedAction<LocaleNameProvider>) () ->
-                    new LocaleNameProviderImpl(
+            LocaleNameProvider provider = new LocaleNameProviderImpl(
                         getAdapterType(),
-                        getLanguageTagSet("LocaleNames")));
+                        getLanguageTagSet("LocaleNames"));
 
             synchronized (this) {
                 if (localeNameProvider == null) {
@@ -297,12 +266,9 @@ public class JRELocaleProviderAdapter extends LocaleProviderAdapter implements R
     @Override
     public TimeZoneNameProvider getTimeZoneNameProvider() {
         if (timeZoneNameProvider == null) {
-            @SuppressWarnings("removal")
-            TimeZoneNameProvider provider = AccessController.doPrivileged(
-                (PrivilegedAction<TimeZoneNameProvider>) () ->
-                    new TimeZoneNameProviderImpl(
+            TimeZoneNameProvider provider = new TimeZoneNameProviderImpl(
                         getAdapterType(),
-                        getLanguageTagSet("TimeZoneNames")));
+                        getLanguageTagSet("TimeZoneNames"));
 
             synchronized (this) {
                 if (timeZoneNameProvider == null) {
@@ -316,12 +282,9 @@ public class JRELocaleProviderAdapter extends LocaleProviderAdapter implements R
     @Override
     public CalendarDataProvider getCalendarDataProvider() {
         if (calendarDataProvider == null) {
-            @SuppressWarnings("removal")
-            CalendarDataProvider provider = AccessController.doPrivileged(
-                (PrivilegedAction<CalendarDataProvider>) () ->
-                    new CalendarDataProviderImpl(
+            CalendarDataProvider provider = new CalendarDataProviderImpl(
                         getAdapterType(),
-                        getLanguageTagSet("CalendarData")));
+                        getLanguageTagSet("CalendarData"));
 
             synchronized (this) {
                 if (calendarDataProvider == null) {
@@ -335,12 +298,9 @@ public class JRELocaleProviderAdapter extends LocaleProviderAdapter implements R
     @Override
     public CalendarNameProvider getCalendarNameProvider() {
         if (calendarNameProvider == null) {
-            @SuppressWarnings("removal")
-            CalendarNameProvider provider = AccessController.doPrivileged(
-                (PrivilegedAction<CalendarNameProvider>) () ->
-                    new CalendarNameProviderImpl(
+            CalendarNameProvider provider = new CalendarNameProviderImpl(
                         getAdapterType(),
-                        getLanguageTagSet("FormatData")));
+                        getLanguageTagSet("FormatData"));
 
             synchronized (this) {
                 if (calendarNameProvider == null) {
@@ -357,12 +317,9 @@ public class JRELocaleProviderAdapter extends LocaleProviderAdapter implements R
     @Override
     public CalendarProvider getCalendarProvider() {
         if (calendarProvider == null) {
-            @SuppressWarnings("removal")
-            CalendarProvider provider = AccessController.doPrivileged(
-                (PrivilegedAction<CalendarProvider>) () ->
-                    new CalendarProviderImpl(
+            CalendarProvider provider = new CalendarProviderImpl(
                         getAdapterType(),
-                        getLanguageTagSet("CalendarData")));
+                        getLanguageTagSet("CalendarData"));
 
             synchronized (this) {
                 if (calendarProvider == null) {
@@ -379,12 +336,9 @@ public class JRELocaleProviderAdapter extends LocaleProviderAdapter implements R
     @Override
     public JavaTimeDateTimePatternProvider getJavaTimeDateTimePatternProvider() {
         if (javaTimeDateTimePatternProvider == null) {
-            @SuppressWarnings("removal")
-            JavaTimeDateTimePatternProvider provider = AccessController.doPrivileged(
-                    (PrivilegedAction<JavaTimeDateTimePatternProvider>) ()
-                    -> new JavaTimeDateTimePatternImpl(
+            JavaTimeDateTimePatternProvider provider = new JavaTimeDateTimePatternImpl(
                             getAdapterType(),
-                            getLanguageTagSet("FormatData")));
+                            getLanguageTagSet("FormatData"));
 
             synchronized (this) {
                 if (javaTimeDateTimePatternProvider == null) {
@@ -437,7 +391,7 @@ public class JRELocaleProviderAdapter extends LocaleProviderAdapter implements R
      */
     @Override
     public Locale[] getAvailableLocales() {
-        return AvailableJRELocales.localeList.clone();
+        return AvailableJRELocales.localeList;
     }
 
     public Set<String> getLanguageTagSet(String category) {
@@ -454,16 +408,9 @@ public class JRELocaleProviderAdapter extends LocaleProviderAdapter implements R
 
     protected Set<String> createLanguageTagSet(String category) {
         String supportedLocaleString = createSupportedLocaleString(category);
-        if (supportedLocaleString == null) {
-            return Collections.emptySet();
-        }
-        StringTokenizer tokens = new StringTokenizer(supportedLocaleString);
-        Set<String> tagset = new HashSet<>((tokens.countTokens() * 4 + 2) / 3);
-        while (tokens.hasMoreTokens()) {
-            tagset.add(tokens.nextToken());
-        }
-
-        return tagset;
+        return supportedLocaleString != null ?
+            Set.of(supportedLocaleString.split("\s+")) :
+            Collections.emptySet();
     }
 
     private static String createSupportedLocaleString(String category) {
@@ -471,30 +418,23 @@ public class JRELocaleProviderAdapter extends LocaleProviderAdapter implements R
         String supportedLocaleString = BaseLocaleDataMetaInfo.getSupportedLocaleString(category);
 
         // Use ServiceLoader to dynamically acquire installed locales' tags.
-        try {
-            @SuppressWarnings("removal")
-            String nonBaseTags = AccessController.doPrivileged((PrivilegedExceptionAction<String>) () -> {
-                StringBuilder tags = new StringBuilder();
-                for (LocaleDataMetaInfo ldmi :
-                        ServiceLoader.loadInstalled(LocaleDataMetaInfo.class)) {
-                    if (ldmi.getType() == LocaleProviderAdapter.Type.JRE) {
-                        String t = ldmi.availableLanguageTags(category);
-                        if (t != null) {
-                            if (tags.length() > 0) {
-                                tags.append(' ');
-                            }
-                            tags.append(t);
-                        }
+        StringBuilder tags = new StringBuilder();
+        for (LocaleDataMetaInfo ldmi :
+                ServiceLoader.loadInstalled(LocaleDataMetaInfo.class)) {
+            if (ldmi.getType() == LocaleProviderAdapter.Type.JRE) {
+                String t = ldmi.availableLanguageTags(category);
+                if (t != null) {
+                    if (!tags.isEmpty()) {
+                        tags.append(' ');
                     }
+                    tags.append(t);
                 }
-                return tags.toString();
-            });
-
-            if (nonBaseTags != null) {
-                supportedLocaleString += " " + nonBaseTags;
             }
-        } catch (PrivilegedActionException pae) {
-            throw new InternalError(pae.getCause());
+        }
+        String nonBaseTags = tags.toString();
+
+        if (nonBaseTags != null) {
+            supportedLocaleString += " " + nonBaseTags;
         }
 
         return supportedLocaleString;
@@ -511,7 +451,7 @@ public class JRELocaleProviderAdapter extends LocaleProviderAdapter implements R
     private static Locale[] createAvailableLocales() {
         /*
          * Gets the locale string list from LocaleDataMetaInfo classes and then
-         * contructs the Locale array and a set of language tags based on the
+         * constructs the Locale array and a set of language tags based on the
          * locale string returned above.
          */
         String supportedLocaleString = createSupportedLocaleString("AvailableLocales");
@@ -520,28 +460,17 @@ public class JRELocaleProviderAdapter extends LocaleProviderAdapter implements R
             throw new InternalError("No available locales for JRE");
         }
 
-        StringTokenizer localeStringTokenizer = new StringTokenizer(supportedLocaleString);
-
-        int length = localeStringTokenizer.countTokens();
-        Locale[] locales = new Locale[length + 1];
-        locales[0] = Locale.ROOT;
-        for (int i = 1; i <= length; i++) {
-            String currentToken = localeStringTokenizer.nextToken();
-            switch (currentToken) {
-                case "ja-JP-JP":
-                    locales[i] = JRELocaleConstants.JA_JP_JP;
-                    break;
-                case "no-NO-NY":
-                    locales[i] = JRELocaleConstants.NO_NO_NY;
-                    break;
-                case "th-TH-TH":
-                    locales[i] = JRELocaleConstants.TH_TH_TH;
-                    break;
-                default:
-                    locales[i] = Locale.forLanguageTag(currentToken);
-            }
-        }
-        return locales;
+        return Arrays.stream(supportedLocaleString.split("\s+"))
+            .map(t -> {
+                return switch (t) {
+                    case "ja-JP-JP" -> JRELocaleConstants.JA_JP_JP;
+                    case "no-NO-NY" -> JRELocaleConstants.NO_NO_NY;
+                    case "th-TH-TH" -> JRELocaleConstants.TH_TH_TH;
+                    default -> Locale.forLanguageTag(t);
+                };
+            })
+            .distinct()
+            .toArray(Locale[]::new);
     }
 
     @Override
