@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 1998, 2013, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 1998, 2023, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -198,7 +198,7 @@ import java.awt.font.FontRenderContext;
  *             // layout can be null if lineContainsText is true
  *             if (layout != null) {
  *                 layouts.addElement(layout);
- *                 penPositions.addElement(new Float(horizontalPos));
+ *                 penPositions.addElement(Float.valueOf(horizontalPos));
  *                 horizontalPos += layout.getAdvance();
  *                 maxAscent = Math.max(maxAscent, layout.getAscent());
  *                 maxDescent = Math.max(maxDescent,
