@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2001, 2022, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2001, 2024, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -67,13 +67,12 @@ import com.sun.tools.javac.main.JavaCompiler;
 import com.sun.tools.javac.tree.JCTree.JCClassDecl;
 import com.sun.tools.javac.tree.JCTree.JCCompilationUnit;
 import com.sun.tools.javac.tree.JCTree.JCModuleDecl;
-import com.sun.tools.javac.tree.TreeInfo;
 import com.sun.tools.javac.util.Context;
 import com.sun.tools.javac.util.ListBuffer;
 import com.sun.tools.javac.util.Name;
 import com.sun.tools.javac.util.Names;
-import jdk.javadoc.doclet.DocletEnvironment;
 import jdk.javadoc.doclet.DocletEnvironment.ModuleMode;
+import jdk.javadoc.internal.doclets.toolkit.WorkArounds;
 
 import static com.sun.tools.javac.code.Scope.LookupKind.NON_RECURSIVE;
 
@@ -185,15 +184,15 @@ public class ElementsTable {
     private Set<ModulePackage> excludePackages = new LinkedHashSet<>();
     private Set<ModulePackage> subPackages = new LinkedHashSet<>();
 
-    private List<JCClassDecl> classDecList = Collections.emptyList();
-    private List<String> classArgList = Collections.emptyList();
-    private com.sun.tools.javac.util.List<JCCompilationUnit> classTreeList = null;
+    private List<JCClassDecl> classDecList = List.of();
+    private List<String> classArgList = List.of();
+    private com.sun.tools.javac.util.List<JCCompilationUnit> compilationUnitList = null;
 
     private final Set<JavaFileObject.Kind> sourceKinds = EnumSet.of(JavaFileObject.Kind.SOURCE);
 
     private final ModifierFilter accessFilter;
 
-    private final AccessKind expandRequires;
+    private final AccessLevel expandRequires;
 
     final boolean xclasses;
 
@@ -239,12 +238,10 @@ public class ElementsTable {
      * @return the module documentation level mode
      */
     public ModuleMode getModuleMode() {
-        switch(accessFilter.getAccessValue(ElementKind.MODULE)) {
-            case PACKAGE: case PRIVATE:
-                return DocletEnvironment.ModuleMode.ALL;
-            default:
-                return DocletEnvironment.ModuleMode.API;
-        }
+        return switch (accessFilter.getAccessValue(ElementKind.MODULE)) {
+            case PACKAGE, PRIVATE -> ModuleMode.ALL;
+            default -> ModuleMode.API;
+        };
     }
 
     private Set<Element> specifiedElements = null;
@@ -272,7 +269,7 @@ public class ElementsTable {
      * A module is fully included,
      *   - is specified on the command line --module
      *   - is derived from the module graph, that is, by expanding the
-     *     requires directive, based on --expand-requires
+     *     'requires' directive, based on --expand-requires
      *
      * A module is included if an enclosed package or type is
      * specified on the command line.
@@ -354,8 +351,8 @@ public class ElementsTable {
         initializeIncludedSets(expandedModulePackages);
     }
 
-    ElementsTable classTrees(com.sun.tools.javac.util.List<JCCompilationUnit> classTrees) {
-        this.classTreeList = classTrees;
+    ElementsTable compilationUnits(com.sun.tools.javac.util.List<JCCompilationUnit> compilationUnits) {
+        this.compilationUnitList = compilationUnits;
         return this;
     }
 
@@ -393,7 +390,7 @@ public class ElementsTable {
                     "module-info", JavaFileObject.Kind.SOURCE);
             if (jfo != null) {
                 JCCompilationUnit jcu = compiler.parse(jfo);
-                JCModuleDecl module = TreeInfo.getModule(jcu);
+                JCModuleDecl module = jcu.getModule();
                 if (module != null) {
                     return module.getName().toString();
                 }
@@ -439,10 +436,29 @@ public class ElementsTable {
                 }
             });
 
+        // scan any module-info.java files specified on the command line
+        for (var cu : compilationUnitList) {
+            loop:
+            for (var d : cu.defs) {
+                switch (d.getTag()) {
+                    case IMPORT -> { }
+                    case MODULEDEF -> {
+                        var md = (JCModuleDecl) d;
+                        var mn = md.qualId.toString();
+                        ModuleSymbol msym = syms.enterModule(names.fromString(mn));
+                        specifiedModuleElements.add(msym);
+                    }
+                    default -> {
+                        break loop;
+                    }
+                }
+            }
+        }
+
         // all the modules specified on the command line have been scraped
         // init the module systems
         this.modules.addExtraAddModules(mlist.toArray(new String[mlist.size()]));
-        this.modules.initModules(this.classTreeList);
+        this.modules.initModules(this.compilationUnitList);
 
         return this;
     }
@@ -485,10 +501,10 @@ public class ElementsTable {
 
     /**
      * Returns the aggregate set of included packages and specified
-     * sub packages.
+     * subpackages.
      *
      * @return the aggregate set of included packages and specified
-     * sub packages
+     * subpackages
      */
     Iterable<ModulePackage> getPackagesToParse() throws IOException {
         List<ModulePackage> result = new ArrayList<>();
@@ -608,8 +624,8 @@ public class ElementsTable {
             return;
         }
 
-        final boolean expandAll = expandRequires.equals(AccessKind.PRIVATE)
-                || expandRequires.equals(AccessKind.PACKAGE);
+        final boolean expandAll = expandRequires.equals(AccessLevel.PRIVATE)
+                || expandRequires.equals(AccessLevel.PACKAGE);
 
         Set<ModuleElement> result = new LinkedHashSet<>();
         ListBuffer<ModuleElement> queue = new ListBuffer<>();
@@ -653,20 +669,20 @@ public class ElementsTable {
                 String binaryName = fm.inferBinaryName(msymloc, fo);
                 String pn = getPackageName(binaryName);
                 PackageSymbol psym = syms.enterPackage(msym, names.fromString(pn));
-                result.add((PackageElement) psym);
+                result.add(psym);
             }
         }
         return result;
     }
 
     private Set<PackageElement> computeModulePackages() throws ToolException {
-        AccessKind accessValue = accessFilter.getAccessValue(ElementKind.PACKAGE);
-        final boolean documentAllModulePackages = (accessValue == AccessKind.PACKAGE ||
-                accessValue == AccessKind.PRIVATE);
+        AccessLevel accessValue = accessFilter.getAccessValue(ElementKind.PACKAGE);
+        final boolean documentAllModulePackages = (accessValue == AccessLevel.PACKAGE ||
+                accessValue == AccessLevel.PRIVATE);
 
         accessValue = accessFilter.getAccessValue(ElementKind.MODULE);
-        final boolean moduleDetailedMode = (accessValue == AccessKind.PACKAGE ||
-                accessValue == AccessKind.PRIVATE);
+        final boolean moduleDetailedMode = (accessValue == AccessLevel.PACKAGE ||
+                accessValue == AccessLevel.PRIVATE);
         Set<PackageElement> expandedModulePackages = new LinkedHashSet<>();
 
         for (ModuleElement mdle : specifiedModuleElements) {
@@ -808,7 +824,7 @@ public class ElementsTable {
     /**
      * Returns an aggregated list of java file objects from the items
      * specified on the command line. The packages specified should not
-     * recurse, however sub-packages should recurse into the sub directories.
+     * recurse, however subpackages should recurse into the subdirectories.
      * @return a list of java file objects
      * @throws IOException if an error occurs
      */
@@ -837,7 +853,7 @@ public class ElementsTable {
         ListBuffer<JavaFileObject> lb = new ListBuffer<>();
         List<Location> locs = getLocation(modpkg);
         if (locs.isEmpty()) {
-            return Collections.emptyList();
+            return List.of();
         }
         String pname = modpkg.packageName;
         for (Location packageLocn : locs) {
@@ -854,10 +870,12 @@ public class ElementsTable {
 
     private ModuleSymbol findModuleOfPackageName(String packageName) {
             Name pack = names.fromString(packageName);
-            for (ModuleSymbol msym : modules.allModules()) {
-                PackageSymbol p = syms.getPackage(msym, pack);
-                if (p != null && !p.members().isEmpty()) {
-                    return msym;
+            if (modules.modulesInitialized()) {
+                for (ModuleSymbol msym : modules.allModules()) {
+                    PackageSymbol p = syms.getPackage(msym, pack);
+                    if (p != null && !p.members().isEmpty()) {
+                        return msym;
+                    }
                 }
             }
             return null;
@@ -865,7 +883,7 @@ public class ElementsTable {
 
     private List<Location> getLocation(ModulePackage modpkg) throws ToolException {
         if (locations.size() == 1 && !locations.contains(StandardLocation.MODULE_SOURCE_PATH)) {
-            return Collections.singletonList(locations.get(0));
+            return List.of(locations.get(0));
         }
 
         if (modpkg.hasModule()) {
@@ -874,7 +892,7 @@ public class ElementsTable {
         // TODO: handle invalid results better.
         ModuleSymbol msym = findModuleOfPackageName(modpkg.packageName);
         if (msym == null) {
-            return Collections.emptyList();
+            return List.of();
         }
         return getModuleLocation(locations, msym.name.toString());
     }
@@ -993,10 +1011,10 @@ public class ElementsTable {
             return false;
         }
         if (visibleElementVisitor == null) {
-            visibleElementVisitor = new SimpleElementVisitor14<Boolean, Void>() {
+            visibleElementVisitor = new SimpleElementVisitor14<>() {
                 @Override
                 public Boolean visitType(TypeElement e, Void p) {
-                    if (!accessFilter.checkModifier(e)) {
+                    if (!accessFilter.checkModifier(e) && !WorkArounds.isImplicitlyDeclaredClass(e)) {
                         return false; // it is not allowed
                     }
                     Element encl = e.getEnclosingElement();
@@ -1015,7 +1033,13 @@ public class ElementsTable {
 
                 @Override
                 protected Boolean defaultAction(Element e, Void p) {
-                    return accessFilter.checkModifier(e);
+                    if (accessFilter.checkModifier(e)) {
+                        return true;
+                    } else {
+                        return WorkArounds.isImplicitlyDeclaredClass(e.getEnclosingElement())
+                                && e.getKind() != ElementKind.CONSTRUCTOR /* nothing interesting in that ctor */
+                                && AccessLevel.of(e.getModifiers()).compareTo(AccessLevel.PACKAGE) >= 0;
+                    }
                 }
 
                 @Override
@@ -1061,14 +1085,11 @@ public class ElementsTable {
                 }
                 Element enclosing = e.getEnclosingElement();
                 if (enclosing != null) {
-                    switch(enclosing.getKind()) {
-                        case PACKAGE:
-                            return specifiedPackageElements.contains((PackageElement)enclosing);
-                        case CLASS: case INTERFACE: case ENUM: case ANNOTATION_TYPE:
-                            return visit((TypeElement) enclosing);
-                        default:
-                            throw new AssertionError("unknown element: " + enclosing);
-                    }
+                    return switch (enclosing.getKind()) {
+                        case CLASS, ENUM, RECORD, INTERFACE, ANNOTATION_TYPE -> visit(enclosing);
+                        case PACKAGE -> specifiedPackageElements.contains((PackageElement) enclosing);
+                        default -> throw new AssertionError("unknown element: " + enclosing);
+                    };
                 }
             }
             return false;
@@ -1080,14 +1101,14 @@ public class ElementsTable {
             if (includedCache.contains(e))
                 return true;
             if (visit(e.getEnclosingElement()) && isSelected(e)) {
-                switch(e.getKind()) {
-                    case ANNOTATION_TYPE: case CLASS: case ENUM: case INTERFACE:
-                    case MODULE: case OTHER: case PACKAGE:
-                        throw new AssertionError("invalid element for this operation: " + e);
-                    default:
+                switch (e.getKind()) {
+                    case CLASS, ENUM, RECORD, INTERFACE, ANNOTATION_TYPE,
+                            MODULE, OTHER, PACKAGE -> throw new AssertionError("invalid element for this operation: " + e);
+                    default -> {
                         // the only allowed kinds in the cache are "members"
                         includedCache.add(e);
                         return true;
+                    }
                 }
             }
             return false;
@@ -1191,12 +1212,8 @@ public class ElementsTable {
                                                     ElementKind.PACKAGE,
                                                     ElementKind.MODULE);
 
-        // all possible access levels allowed for each element
-        private final EnumMap<ElementKind, EnumSet<AccessKind>> filterMap =
-                new EnumMap<>(ElementKind.class);
-
-        // the specified access level for each element
-        private final EnumMap<ElementKind, AccessKind> accessMap =
+        // the allowed access level for each element kind
+        private final EnumMap<ElementKind, AccessLevel> allowedAccess =
                 new EnumMap<>(ElementKind.class);
 
         /**
@@ -1205,50 +1222,23 @@ public class ElementsTable {
          * @param options the tool options
          */
         ModifierFilter(ToolOptions options) {
-
-            AccessKind accessValue = null;
             for (ElementKind kind : ALLOWED_KINDS) {
-                switch (kind) {
-                    case METHOD:
-                        accessValue  = options.showMembersAccess();
-                        break;
-                    case CLASS:
-                        accessValue  = options.showTypesAccess();
-                        break;
-                    case PACKAGE:
-                        accessValue  = options.showPackagesAccess();
-                        break;
-                    case MODULE:
-                        accessValue  = options.showModuleContents();
-                        break;
-                    default:
-                        throw new AssertionError("unknown element: " + kind);
-
-                }
-                accessMap.put(kind, accessValue);
-                filterMap.put(kind, getFilterSet(accessValue));
+                var accessValue = switch (kind) {
+                    case METHOD  -> options.showMembersAccess();
+                    case CLASS   -> options.showTypesAccess();
+                    case PACKAGE -> options.showPackagesAccess();
+                    case MODULE  -> options.showModuleContents();
+                    default -> throw new AssertionError("unknown element: " + kind);
+                };
+                allowedAccess.put(kind, accessValue);
             }
         }
 
-        static EnumSet<AccessKind> getFilterSet(AccessKind accessValue) {
-            switch (accessValue) {
-                case PUBLIC:
-                    return EnumSet.of(AccessKind.PUBLIC);
-                case PROTECTED:
-                default:
-                    return EnumSet.of(AccessKind.PUBLIC, AccessKind.PROTECTED);
-                case PACKAGE:
-                    return EnumSet.of(AccessKind.PUBLIC, AccessKind.PROTECTED, AccessKind.PACKAGE);
-                case PRIVATE:
-                    return EnumSet.allOf(AccessKind.class);
-            }
-        }
-
-        public AccessKind getAccessValue(ElementKind kind) {
+        public AccessLevel getAccessValue(ElementKind kind) {
             if (!ALLOWED_KINDS.contains(kind)) {
                 throw new IllegalArgumentException("not allowed: " + kind);
             }
-            return accessMap.getOrDefault(kind, AccessKind.PROTECTED);
+            return allowedAccess.getOrDefault(kind, AccessLevel.PROTECTED);
         }
 
         /**
@@ -1258,34 +1248,20 @@ public class ElementsTable {
          * @return whether the modifiers pass this filter
          */
         public boolean checkModifier(Element e) {
-            Set<Modifier> modifiers = e.getModifiers();
-            AccessKind fflag = AccessKind.PACKAGE;
-            if (modifiers.contains(Modifier.PUBLIC)) {
-                fflag = AccessKind.PUBLIC;
-            } else if (modifiers.contains(Modifier.PROTECTED)) {
-                fflag = AccessKind.PROTECTED;
-            } else if (modifiers.contains(Modifier.PRIVATE)) {
-                fflag = AccessKind.PRIVATE;
-            }
-            EnumSet<AccessKind> filterSet = filterMap.get(getAllowedKind(e.getKind()));
-            return filterSet.contains(fflag);
+            var access = AccessLevel.of(e.getModifiers());
+            return allowedAccess.get(toTrackedKind(e.getKind())).compareTo(access) <= 0;
         }
 
-        // convert a requested element kind to an allowed access kind
-        private ElementKind getAllowedKind(ElementKind kind) {
-            switch (kind) {
-                case CLASS: case METHOD: case MODULE: case PACKAGE:
-                    return kind;
-                case RECORD: case ANNOTATION_TYPE: case ENUM: case INTERFACE:
-                    return ElementKind.CLASS;
-                case CONSTRUCTOR: case ENUM_CONSTANT: case EXCEPTION_PARAMETER:
-                case FIELD: case INSTANCE_INIT: case LOCAL_VARIABLE: case PARAMETER:
-                case RESOURCE_VARIABLE: case STATIC_INIT: case TYPE_PARAMETER:
-                case RECORD_COMPONENT:
-                    return ElementKind.METHOD;
-                default:
-                    throw new AssertionError("unsupported kind: " + kind);
-            }
+        // convert the requested element kind to a tracked access kind
+        // (access is tracked for certain kinds only)
+        private ElementKind toTrackedKind(ElementKind kind) {
+            return switch (kind) {
+                case CLASS, METHOD, MODULE, PACKAGE -> kind;
+                case RECORD, ANNOTATION_TYPE, ENUM, INTERFACE -> ElementKind.CLASS;
+                case CONSTRUCTOR, ENUM_CONSTANT, EXCEPTION_PARAMETER, FIELD, INSTANCE_INIT, LOCAL_VARIABLE,
+                        PARAMETER, RESOURCE_VARIABLE, STATIC_INIT, TYPE_PARAMETER, RECORD_COMPONENT -> ElementKind.METHOD;
+                default -> throw new AssertionError("unsupported kind: " + kind);
+            };
         }
     } // end ModifierFilter
 }
