@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2019, 2021, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2019, 2025, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -24,13 +24,13 @@
  */
 package jdk.jpackage.internal;
 
+import jdk.jpackage.internal.model.LinuxPackage;
+import jdk.jpackage.internal.model.LinuxLauncher;
+import jdk.jpackage.internal.model.Package;
+import jdk.jpackage.internal.model.Launcher;
 import java.awt.image.BufferedImage;
-import java.io.BufferedReader;
 import java.io.File;
 import java.io.IOException;
-import java.io.InputStream;
-import java.io.InputStreamReader;
-import java.nio.file.Files;
 import java.nio.file.Path;
 import java.util.ArrayList;
 import java.util.Arrays;
@@ -39,166 +39,139 @@ import java.util.HashMap;
 import java.util.HashSet;
 import java.util.List;
 import java.util.Map;
+import java.util.Optional;
 import java.util.Set;
-import java.util.regex.Pattern;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 import javax.imageio.ImageIO;
 import javax.xml.stream.XMLStreamException;
 import javax.xml.stream.XMLStreamWriter;
-import jdk.jpackage.internal.Arguments.CLIOptions;
-import static jdk.jpackage.internal.LinuxAppImageBuilder.DEFAULT_ICON;
-import static jdk.jpackage.internal.LinuxAppImageBuilder.ICON_PNG;
-import static jdk.jpackage.internal.OverridableResource.createResource;
-import static jdk.jpackage.internal.StandardBundlerParam.ADD_LAUNCHERS;
-import static jdk.jpackage.internal.StandardBundlerParam.APP_NAME;
-import static jdk.jpackage.internal.StandardBundlerParam.DESCRIPTION;
-import static jdk.jpackage.internal.StandardBundlerParam.FILE_ASSOCIATIONS;
-import static jdk.jpackage.internal.StandardBundlerParam.ICON;
-import static jdk.jpackage.internal.StandardBundlerParam.PREDEFINED_APP_IMAGE;
-import static jdk.jpackage.internal.StandardBundlerParam.SHORTCUT_HINT;;
+import static jdk.jpackage.internal.ApplicationImageUtils.createLauncherIconResource;
+import jdk.jpackage.internal.model.FileAssociation;
+import jdk.jpackage.internal.util.CompositeProxy;
+import jdk.jpackage.internal.util.PathUtils;
+import jdk.jpackage.internal.util.XmlUtils;
+import static jdk.jpackage.internal.util.function.ThrowingFunction.toFunction;
 
 /**
  * Helper to create files for desktop integration.
  */
-final class DesktopIntegration {
+final class DesktopIntegration extends ShellCustomAction {
 
-    static final String DESKTOP_COMMANDS_INSTALL = "DESKTOP_COMMANDS_INSTALL";
-    static final String DESKTOP_COMMANDS_UNINSTALL = "DESKTOP_COMMANDS_UNINSTALL";
-    static final String UTILITY_SCRIPTS = "UTILITY_SCRIPTS";
+    private static final String COMMANDS_INSTALL = "DESKTOP_COMMANDS_INSTALL";
+    private static final String COMMANDS_UNINSTALL = "DESKTOP_COMMANDS_UNINSTALL";
+    private static final String SCRIPTS = "DESKTOP_SCRIPTS";
+    private static final String COMMON_SCRIPTS = "COMMON_SCRIPTS";
 
-    private DesktopIntegration(PlatformPackage thePackage,
-            Map<String, ? super Object> params,
-            Map<String, ? super Object> mainParams) throws IOException {
+    private static final List<String> REPLACEMENT_STRING_IDS = List.of(
+            COMMANDS_INSTALL, COMMANDS_UNINSTALL, SCRIPTS, COMMON_SCRIPTS);
 
-        associations = FileAssociation.fetchFrom(params).stream()
-                .filter(fa -> !fa.mimeTypes.isEmpty())
-                .map(LinuxFileAssociation::new)
-                .collect(Collectors.toUnmodifiableList());
+    private DesktopIntegration(BuildEnv env, LinuxPackage pkg, LinuxLauncher launcher) throws IOException {
 
-        launchers = ADD_LAUNCHERS.fetchFrom(params);
+        associations = launcher.fileAssociations().stream().map(
+                LinuxFileAssociation::create).toList();
 
-        this.thePackage = thePackage;
+        this.env = env;
+        this.pkg = pkg;
+        this.launcher = launcher;
 
         // Need desktop and icon files if one of conditions is met:
         //  - there are file associations configured
-        //  - user explicitely requested to create a shortcut
-        boolean withDesktopFile = !associations.isEmpty() || LINUX_SHORTCUT_HINT.fetchFrom(params);
+        //  - user explicitly requested to create a shortcut
+        boolean withDesktopFile = !associations.isEmpty() || launcher.shortcut().orElse(false);
 
-        var curIconResource = LinuxAppImageBuilder.createIconResource(DEFAULT_ICON,
-                ICON_PNG, params, mainParams);
-        if (curIconResource == null) {
+        var curIconResource = createLauncherIconResource(pkg.app(), launcher,
+                env::createResource);
+
+        if (curIconResource.isEmpty()) {
             // This is additional launcher with explicit `no icon` configuration.
             withDesktopFile = false;
         } else {
             final Path nullPath = null;
-            if (curIconResource.saveToFile(nullPath)
-                    != OverridableResource.Source.DefaultResource) {
+            if (curIconResource.get().saveToFile(nullPath) != OverridableResource.Source.DefaultResource) {
                 // This launcher has custom icon configured.
                 withDesktopFile = true;
             }
         }
 
-        desktopFileResource = createResource("template.desktop", params)
+        desktopFileResource = env.createResource("template.desktop")
                 .setCategory(I18N.getString("resource.menu-shortcut-descriptor"))
-                .setPublicName(APP_NAME.fetchFrom(params) + ".desktop");
+                .setPublicName(launcher.name() + ".desktop");
 
-        final String escapedAppFileName = APP_NAME.fetchFrom(params).replaceAll("\\s+", "_");
+        final String escapedAppFileName = launcher.name().replaceAll("\\s+", "_");
 
         // XDG recommends to use vendor prefix in desktop file names as xdg
         // commands copy files to system directories.
         // Package name should be a good prefix.
         final String desktopFileName = String.format("%s-%s.desktop",
-                    thePackage.name(), escapedAppFileName);
+                    pkg.packageName(), escapedAppFileName);
         final String mimeInfoFileName = String.format("%s-%s-MimeInfo.xml",
-                    thePackage.name(), escapedAppFileName);
+                    pkg.packageName(), escapedAppFileName);
 
-        mimeInfoFile = new DesktopFile(mimeInfoFileName);
+        mimeInfoFile = createDesktopFile(mimeInfoFileName);
 
         if (withDesktopFile) {
-            desktopFile = new DesktopFile(desktopFileName);
-            iconFile = new DesktopFile(escapedAppFileName
-                    + IOUtils.getSuffix(Path.of(DEFAULT_ICON)));
+            desktopFile = Optional.of(createDesktopFile(desktopFileName));
+            iconFile = Optional.of(createDesktopFile(escapedAppFileName + ".png"));
 
-            if (curIconResource == null) {
+            if (curIconResource.isEmpty()) {
                 // Create default icon.
-                curIconResource = LinuxAppImageBuilder.createIconResource(
-                        DEFAULT_ICON, ICON_PNG, mainParams, null);
+                curIconResource = createLauncherIconResource(pkg.app(), pkg.app().mainLauncher().orElseThrow(), env::createResource);
             }
         } else {
-            desktopFile = null;
-            iconFile = null;
+            desktopFile = Optional.empty();
+            iconFile = Optional.empty();
         }
 
         iconResource = curIconResource;
 
-        desktopFileData = Collections.unmodifiableMap(
-                createDataForDesktopFile(params));
+        desktopFileData = createDataForDesktopFile();
 
-        nestedIntegrations = new ArrayList<>();
-        // Read launchers information from predefine app image
-        if (launchers.isEmpty() &&
-                PREDEFINED_APP_IMAGE.fetchFrom(params) != null) {
-            List<AppImageFile.LauncherInfo> launcherInfos =
-                    AppImageFile.getLaunchers(
-                    PREDEFINED_APP_IMAGE.fetchFrom(params), params);
-            if (!launcherInfos.isEmpty()) {
-                launcherInfos.remove(0); // Remove main launcher
-            }
-            for (var launcherInfo : launcherInfos) {
-                Map<String, ? super Object> launcherParams = new HashMap<>();
-                Arguments.putUnlessNull(launcherParams, CLIOptions.NAME.getId(),
-                        launcherInfo.getName());
-                launcherParams = AddLauncherArguments.merge(params,
-                        launcherParams, ICON.getID(), ICON_PNG.getID(),
-                        ADD_LAUNCHERS.getID(), FILE_ASSOCIATIONS.getID(),
-                        PREDEFINED_APP_IMAGE.getID());
-                if (launcherInfo.isShortcut()) {
-                    nestedIntegrations.add(new DesktopIntegration(thePackage,
-                            launcherParams, params));
-                }
-            }
+        if (launcher != pkg.app().mainLauncher().orElseThrow()) {
+            nestedIntegrations = List.of();
         } else {
-            for (var launcherParams : launchers) {
-                launcherParams = AddLauncherArguments.merge(params,
-                        launcherParams, ICON.getID(), ICON_PNG.getID(),
-                        ADD_LAUNCHERS.getID(), FILE_ASSOCIATIONS.getID());
-                if (SHORTCUT_HINT.fetchFrom(launcherParams)) {
-                    nestedIntegrations.add(new DesktopIntegration(thePackage,
-                            launcherParams, params));
-                }
-            }
+            nestedIntegrations = pkg.app().additionalLaunchers().stream().map(v -> {
+                return (LinuxLauncher)v;
+            }).filter(l -> {
+                return l.shortcut().orElse(true);
+            }).map(toFunction(l -> {
+                return new DesktopIntegration(env, pkg, l);
+            })).toList();
         }
     }
 
-    static DesktopIntegration create(PlatformPackage thePackage,
-            Map<String, ? super Object> params) throws IOException {
-        if (StandardBundlerParam.isRuntimeInstaller(params)) {
-            return null;
+    static ShellCustomAction create(BuildEnv env, Package pkg) throws IOException {
+        if (pkg.isRuntimeInstaller()) {
+            return ShellCustomAction.nop(REPLACEMENT_STRING_IDS);
         }
-        return new DesktopIntegration(thePackage, params, null);
+        return new DesktopIntegration(env, (LinuxPackage) pkg,
+                (LinuxLauncher) pkg.app().mainLauncher().orElseThrow());
     }
 
+    @Override
     List<String> requiredPackages() {
         return Stream.of(List.of(this), nestedIntegrations).flatMap(
                 List::stream).map(DesktopIntegration::requiredPackagesSelf).flatMap(
                 List::stream).distinct().toList();
     }
 
-    Map<String, String> create() throws IOException {
-        associations.forEach(assoc -> assoc.data.verify());
+    @Override
+    protected List<String> replacementStringIds() {
+        return REPLACEMENT_STRING_IDS;
+    }
 
-        if (iconFile != null) {
+    @Override
+    protected Map<String, String> createImpl() throws IOException {
+        if (iconFile.isPresent()) {
             // Create application icon file.
-            iconResource.saveToFile(iconFile.srcPath());
+            iconResource.orElseThrow().saveToFile(iconFile.orElseThrow().srcPath());
         }
 
         Map<String, String> data = new HashMap<>(desktopFileData);
 
         final ShellCommands shellCommands;
-        if (desktopFile != null) {
+        if (desktopFile.isPresent()) {
             // Create application desktop description file.
-            createDesktopFile(data);
+            saveDesktopFile(data);
 
             // Shell commands will be created only if desktop file
             // should be installed.
@@ -222,72 +195,45 @@ final class DesktopIntegration {
             shellCommands.applyTo(data);
         }
 
-        boolean needCleanupScripts = !associations.isEmpty();
-
         // Take care of additional launchers if there are any.
         // Process every additional launcher as the main application launcher.
         // Collect shell commands to install/uninstall integration with desktop
         // of the additional launchers and append them to the corresponding
         // commands of the main launcher.
         List<String> installShellCmds = new ArrayList<>(Arrays.asList(
-                data.get(DESKTOP_COMMANDS_INSTALL)));
+                data.get(COMMANDS_INSTALL)));
         List<String> uninstallShellCmds = new ArrayList<>(Arrays.asList(
-                data.get(DESKTOP_COMMANDS_UNINSTALL)));
+                data.get(COMMANDS_UNINSTALL)));
         for (var integration: nestedIntegrations) {
-            if (!integration.associations.isEmpty()) {
-                needCleanupScripts = true;
-            }
-
             Map<String, String> launcherData = integration.create();
 
-            installShellCmds.add(launcherData.get(DESKTOP_COMMANDS_INSTALL));
-            uninstallShellCmds.add(launcherData.get(
-                    DESKTOP_COMMANDS_UNINSTALL));
+            installShellCmds.add(launcherData.get(COMMANDS_INSTALL));
+            uninstallShellCmds.add(launcherData.get(COMMANDS_UNINSTALL));
         }
 
-        data.put(DESKTOP_COMMANDS_INSTALL, stringifyShellCommands(
-                installShellCmds));
-        data.put(DESKTOP_COMMANDS_UNINSTALL, stringifyShellCommands(
-                uninstallShellCmds));
+        data.put(COMMANDS_INSTALL, stringifyShellCommands(installShellCmds));
+        data.put(COMMANDS_UNINSTALL, stringifyShellCommands(uninstallShellCmds));
 
-        if (needCleanupScripts) {
-            // Pull in utils.sh scrips library.
-            try (InputStream is = OverridableResource.readDefault("utils.sh");
-                    InputStreamReader isr = new InputStreamReader(is);
-                    BufferedReader reader = new BufferedReader(isr)) {
-                data.put(UTILITY_SCRIPTS, reader.lines().collect(
-                        Collectors.joining(System.lineSeparator())));
-            }
-        } else {
-            data.put(UTILITY_SCRIPTS, "");
-        }
+        data.put(COMMON_SCRIPTS, stringifyTextFile("common_utils.sh"));
+        data.put(SCRIPTS, stringifyTextFile("desktop_utils.sh"));
 
         return data;
     }
 
     private List<String> requiredPackagesSelf() {
-        if (desktopFile != null) {
-            return List.of("xdg-utils");
-        }
-        return Collections.emptyList();
+        return desktopFile.map(file -> List.of("xdg-utils")).orElseGet(Collections::emptyList);
     }
 
-    private Map<String, String> createDataForDesktopFile(
-            Map<String, ? super Object> params) {
+    private Map<String, String> createDataForDesktopFile() {
         Map<String, String> data = new HashMap<>();
-        data.put("APPLICATION_NAME", APP_NAME.fetchFrom(params));
-        data.put("APPLICATION_DESCRIPTION", DESCRIPTION.fetchFrom(params));
-        data.put("APPLICATION_ICON",
-                iconFile != null ? iconFile.installPath().toString() : null);
-        data.put("DEPLOY_BUNDLE_CATEGORY", MENU_GROUP.fetchFrom(params));
-
-        String appLauncher = thePackage.installedApplicationLayout().launchersDirectory().resolve(
-                LinuxAppImageBuilder.getLauncherName(params)).toString();
-        if (Pattern.compile("\\s").matcher(appLauncher).find()) {
-            // Path contains whitespace(s). Enclose in double quotes.
-            appLauncher = "\"" + appLauncher + "\"";
-        }
-        data.put("APPLICATION_LAUNCHER", appLauncher);
+        data.put("APPLICATION_NAME", launcher.name());
+        data.put("APPLICATION_DESCRIPTION", launcher.description());
+        data.put("APPLICATION_ICON", iconFile.map(
+                f -> f.installPath().toString()).orElse(null));
+        data.put("DEPLOY_BUNDLE_CATEGORY", pkg.menuGroupName());
+        data.put("APPLICATION_LAUNCHER", Enquoter.forPropertyValues().applyTo(
+                pkg.asInstalledPackageApplicationLayout().orElseThrow().launchersDirectory().resolve(
+                        launcher.executableNameWithSuffix()).toString()));
 
         return data;
     }
@@ -301,24 +247,31 @@ final class DesktopIntegration {
             registerIconCmds = new ArrayList<>();
             unregisterIconCmds = new ArrayList<>();
 
-            registerDesktopFileCmd = String.join(" ", "xdg-desktop-menu",
-                    "install", desktopFile.installPath().toString());
-            unregisterDesktopFileCmd = String.join(" ", "xdg-desktop-menu",
-                    "uninstall", desktopFile.installPath().toString());
+            final var desktopFileInstallPath = desktopFile.orElseThrow().installPath().toString();
+
+            registerDesktopFileCmd = String.join(" ",
+                    "xdg-desktop-menu", "install", desktopFileInstallPath);
+            unregisterDesktopFileCmd = String.join(" ",
+                    "do_if_file_belongs_to_single_package", desktopFileInstallPath,
+                    "xdg-desktop-menu", "uninstall", desktopFileInstallPath);
         }
 
         void setFileAssociations() {
             registerFileAssociationsCmd = String.join(" ", "xdg-mime",
                     "install",
                     mimeInfoFile.installPath().toString());
-            unregisterFileAssociationsCmd = String.join(" ", "xdg-mime",
-                    "uninstall", mimeInfoFile.installPath().toString());
+            unregisterFileAssociationsCmd = String.join(" ",
+                    "do_if_file_belongs_to_single_package", mimeInfoFile.
+                            installPath().toString(), "xdg-mime", "uninstall",
+                    mimeInfoFile.installPath().toString());
+
+            final var desktopFileInstallPath = desktopFile.orElseThrow().installPath();
 
             //
             // Add manual cleanup of system files to get rid of
             // the default mime type handlers.
             //
-            // Even after mime type is unregisterd with `xdg-mime uninstall`
+            // Even after mime type is unregistered with `xdg-mime uninstall`
             // command and desktop file deleted with `xdg-desktop-menu uninstall`
             // command, records in
             // `/usr/share/applications/defaults.list` (Ubuntu 16) or
@@ -328,16 +281,12 @@ final class DesktopIntegration {
             // of non-existing desktop file.
             //
             String cleanUpCommand = String.join(" ",
-                    "uninstall_default_mime_handler",
-                    desktopFile.installPath().getFileName().toString(),
+                    "do_if_file_belongs_to_single_package", desktopFileInstallPath.toString(),
+                    "desktop_uninstall_default_mime_handler", desktopFileInstallPath.getFileName().toString(),
                     String.join(" ", getMimeTypeNamesFromFileAssociations()));
 
             unregisterFileAssociationsCmd = stringifyShellCommands(
                     unregisterFileAssociationsCmd, cleanUpCommand);
-        }
-
-        void addIcon(String mimeType, Path iconFile) {
-            addIcon(mimeType, iconFile, getSquareSizeOfImage(iconFile.toFile()));
         }
 
         void addIcon(String mimeType, Path iconFile, int imgSize) {
@@ -346,8 +295,10 @@ final class DesktopIntegration {
             registerIconCmds.add(String.join(" ", "xdg-icon-resource",
                     "install", "--context", "mimetypes", "--size",
                     Integer.toString(imgSize), iconFile.toString(), dashMime));
-            unregisterIconCmds.add(String.join(" ", "xdg-icon-resource",
-                    "uninstall", dashMime, "--size", Integer.toString(imgSize)));
+            unregisterIconCmds.add(String.join(" ",
+                    "do_if_file_belongs_to_single_package", iconFile.toString(),
+                    "xdg-icon-resource", "uninstall", dashMime, "--size",
+                    Integer.toString(imgSize)));
         }
 
         void applyTo(Map<String, String> data) {
@@ -356,13 +307,13 @@ final class DesktopIntegration {
             cmds.add(registerDesktopFileCmd);
             cmds.add(registerFileAssociationsCmd);
             cmds.addAll(registerIconCmds);
-            data.put(DESKTOP_COMMANDS_INSTALL, stringifyShellCommands(cmds));
+            data.put(COMMANDS_INSTALL, stringifyShellCommands(cmds));
 
             cmds.clear();
             cmds.add(unregisterDesktopFileCmd);
             cmds.add(unregisterFileAssociationsCmd);
             cmds.addAll(unregisterIconCmds);
-            data.put(DESKTOP_COMMANDS_UNINSTALL, stringifyShellCommands(cmds));
+            data.put(COMMANDS_UNINSTALL, stringifyShellCommands(cmds));
         }
 
         private String registerDesktopFileCmd;
@@ -376,67 +327,46 @@ final class DesktopIntegration {
     }
 
     /**
-     * Desktop integration file. xml, icon, etc.
-     * Resides somewhere in application installation tree.
-     * Has two paths:
-     *  - path where it should be placed at package build time;
-     *  - path where it should be installed by package manager;
+     * Creates desktop integration file. xml, icon, etc.
+     *
+     * Returned instance:
+     *  - srcPath(): path where it should be placed at package build time;
+     *  - installPath(): path where it should be installed by package manager;
      */
-    private class DesktopFile {
-
-        DesktopFile(String fileName) {
-            installPath = thePackage
-                    .installedApplicationLayout()
-                    .destktopIntegrationDirectory().resolve(fileName);
-            srcPath = thePackage
-                    .sourceApplicationLayout()
-                    .destktopIntegrationDirectory().resolve(fileName);
-        }
-
-        private final Path installPath;
-        private final Path srcPath;
-
-        Path installPath() {
-            return installPath;
-        }
-
-        Path srcPath() {
-            return srcPath;
-        }
+    private InstallableFile createDesktopFile(String fileName) {
+        var srcPath = pkg.asPackageApplicationLayout().orElseThrow().resolveAt(env.appImageDir()).desktopIntegrationDirectory().resolve(fileName);
+        var installPath = pkg.asInstalledPackageApplicationLayout().orElseThrow().desktopIntegrationDirectory().resolve(fileName);
+        return new InstallableFile(srcPath, installPath);
     }
 
     private void appendFileAssociation(XMLStreamWriter xml,
-            FileAssociation assoc) throws XMLStreamException {
+            LinuxFileAssociation fa) throws XMLStreamException {
 
-        for (var mimeType : assoc.mimeTypes) {
             xml.writeStartElement("mime-type");
-            xml.writeAttribute("type", mimeType);
+            xml.writeAttribute("type", fa.mimeType());
 
-            final String description = assoc.description;
-            if (description != null && !description.isEmpty()) {
+            final var description = fa.description().orElse(null);
+            if (description != null) {
                 xml.writeStartElement("comment");
                 xml.writeCharacters(description);
                 xml.writeEndElement();
             }
 
-            for (String ext : assoc.extensions) {
-                xml.writeStartElement("glob");
-                xml.writeAttribute("pattern", "*." + ext);
-                xml.writeEndElement();
-            }
+            xml.writeStartElement("glob");
+            xml.writeAttribute("pattern", "*." + fa.extension());
+            xml.writeEndElement();
 
             xml.writeEndElement();
-        }
     }
 
     private void createFileAssociationsMimeInfoFile() throws IOException {
-        IOUtils.createXml(mimeInfoFile.srcPath(), xml -> {
+        XmlUtils.createXml(mimeInfoFile.srcPath(), xml -> {
             xml.writeStartElement("mime-info");
             xml.writeDefaultNamespace(
                     "http://www.freedesktop.org/standards/shared-mime-info");
 
-            for (var assoc : associations) {
-                appendFileAssociation(xml, assoc.data);
+            for (var fa : associations) {
+                appendFileAssociation(xml, fa);
             }
 
             xml.writeEndElement();
@@ -446,53 +376,48 @@ final class DesktopIntegration {
     private void addFileAssociationIconFiles(ShellCommands shellCommands)
             throws IOException {
         Set<String> processedMimeTypes = new HashSet<>();
-        for (var assoc : associations) {
-            if (assoc.iconSize <= 0) {
+        for (var fa : associations) {
+            if (!fa.hasIcon()) {
                 // No icon.
                 continue;
             }
 
-            for (var mimeType : assoc.data.mimeTypes) {
-                if (processedMimeTypes.contains(mimeType)) {
-                    continue;
-                }
-
-                processedMimeTypes.add(mimeType);
-
-                // Create icon name for mime type from mime type.
-                DesktopFile faIconFile = new DesktopFile(mimeType.replace(
-                        File.separatorChar, '-') + IOUtils.getSuffix(
-                                assoc.data.iconPath));
-
-                IOUtils.copyFile(assoc.data.iconPath,
-                        faIconFile.srcPath());
-
-                shellCommands.addIcon(mimeType, faIconFile.installPath(),
-                        assoc.iconSize);
+            var mimeType = fa.mimeType();
+            if (processedMimeTypes.contains(mimeType)) {
+                continue;
             }
+
+            processedMimeTypes.add(mimeType);
+
+            final var faIcon = fa.icon().orElseThrow();
+
+            // Create icon name for mime type from mime type.
+            var faIconFile = createDesktopFile(mimeType.replace(File.separatorChar,
+                    '-') + PathUtils.getSuffix(faIcon));
+
+            IOUtils.copyFile(faIcon, faIconFile.srcPath());
+
+            shellCommands.addIcon(mimeType, faIconFile.installPath(), fa.iconSize());
         }
     }
 
-    private void createDesktopFile(Map<String, String> data) throws IOException {
+    private void saveDesktopFile(Map<String, String> data) throws IOException {
         List<String> mimeTypes = getMimeTypeNamesFromFileAssociations();
         data.put("DESKTOP_MIMES", "MimeType=" + String.join(";", mimeTypes));
 
         // prepare desktop shortcut
         desktopFileResource
                 .setSubstitutionData(data)
-                .saveToFile(desktopFile.srcPath());
+                .saveToFile(desktopFile.orElseThrow().srcPath());
     }
 
     private List<String> getMimeTypeNamesFromFileAssociations() {
-        return associations.stream()
-                .map(fa -> fa.data.mimeTypes)
-                .flatMap(List::stream)
-                .collect(Collectors.toUnmodifiableList());
+        return associations.stream().map(FileAssociation::mimeType).toList();
     }
 
-    private static int getSquareSizeOfImage(File f) {
+    private static int getSquareSizeOfImage(Path path) {
         try {
-            BufferedImage bi = ImageIO.read(f);
+            BufferedImage bi = ImageIO.read(path.toFile());
             return Math.max(bi.getWidth(), bi.getHeight());
         } catch (IOException e) {
             Log.verbose(e);
@@ -526,60 +451,48 @@ final class DesktopIntegration {
         return commonIconSize;
     }
 
-    private static String stringifyShellCommands(String... commands) {
-        return stringifyShellCommands(Arrays.asList(commands));
+    private interface LinuxFileAssociationMixin {
+        int iconSize();
+
+        record Stub(int iconSize) implements LinuxFileAssociationMixin {}
     }
 
-    private static String stringifyShellCommands(List<String> commands) {
-        return String.join(System.lineSeparator(), commands.stream().filter(
-                s -> s != null && !s.isEmpty()).toList());
-    }
-
-    private static class LinuxFileAssociation {
-        LinuxFileAssociation(FileAssociation fa) {
-            this.data = fa;
-            if (fa.iconPath != null && Files.isReadable(fa.iconPath)) {
-                iconSize = getSquareSizeOfImage(fa.iconPath.toFile());
-            } else {
-                iconSize = -1;
+    private static interface LinuxFileAssociation extends FileAssociation, LinuxFileAssociationMixin {
+        static LinuxFileAssociation create(FileAssociation fa) {
+            var iconSize = getIconSize(fa);
+            if (iconSize <= 0) {
+                // nullify the icon
+                fa = new FileAssociation.Stub(fa.description(), Optional.empty(),
+                        fa.mimeType(), fa.extension());
             }
+            return CompositeProxy.build()
+                    .invokeTunnel(CompositeProxyTunnel.INSTANCE)
+                    .create(LinuxFileAssociation.class, fa,
+                            new LinuxFileAssociationMixin.Stub(iconSize));
         }
 
-        final FileAssociation data;
-        final int iconSize;
+        private static int getIconSize(FileAssociation fa) {
+            return Optional.of(fa)
+                    .flatMap(FileAssociation::icon)
+                    .map(DesktopIntegration::getSquareSizeOfImage)
+                    .orElse(-1);
+        }
     }
 
-    private final PlatformPackage thePackage;
+    private final BuildEnv env;
+    private final LinuxPackage pkg;
+    private final Launcher launcher;
 
     private final List<LinuxFileAssociation> associations;
 
-    private final List<Map<String, ? super Object>> launchers;
-
-    private final OverridableResource iconResource;
+    private final Optional<OverridableResource> iconResource;
     private final OverridableResource desktopFileResource;
 
-    private final DesktopFile mimeInfoFile;
-    private final DesktopFile desktopFile;
-    private final DesktopFile iconFile;
+    private final InstallableFile mimeInfoFile;
+    private final Optional<InstallableFile> desktopFile;
+    private final Optional<InstallableFile> iconFile;
 
     private final List<DesktopIntegration> nestedIntegrations;
 
     private final Map<String, String> desktopFileData;
-
-    private static final BundlerParamInfo<String> MENU_GROUP =
-        new StandardBundlerParam<>(
-                Arguments.CLIOptions.LINUX_MENU_GROUP.getId(),
-                String.class,
-                params -> I18N.getString("param.menu-group.default"),
-                (s, p) -> s
-        );
-
-    private static final StandardBundlerParam<Boolean> LINUX_SHORTCUT_HINT =
-        new StandardBundlerParam<>(
-                Arguments.CLIOptions.LINUX_SHORTCUT_HINT.getId(),
-                Boolean.class,
-                params -> false,
-                (s, p) -> (s == null || "null".equalsIgnoreCase(s))
-                        ? false : Boolean.valueOf(s)
-        );
 }
