@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2015, 2016, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2015, 2024, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -32,7 +32,6 @@ import javax.xml.xpath.XPathExpressionException;
 import static org.testng.Assert.assertEquals;
 import static org.testng.Assert.assertTrue;
 
-import org.testng.annotations.Listeners;
 import org.testng.annotations.Test;
 import org.w3c.dom.Document;
 import org.w3c.dom.Node;
@@ -41,12 +40,10 @@ import org.w3c.dom.Node;
  * @test
  * @bug 8054196
  * @library /javax/xml/jaxp/libs /javax/xml/jaxp/unittest
- * @run testng/othervm -DrunSecMngr=true -Djava.security.manager=allow xpath.XPathAnyTypeTest
  * @run testng/othervm xpath.XPathAnyTypeTest
  * @summary Test for the project XPath: support any type. This test covers the new
  * evaluateExpression methods of XPath, as well as XPathNodes and XPathEvaluationResult.
  */
-@Listeners({jaxp.library.BasePolicy.class})
 public class XPathAnyTypeTest extends XPathTestBase {
     /*
      Test for resolveFunction(QName functionName,int arity); evaluate throws
@@ -90,7 +87,8 @@ public class XPathAnyTypeTest extends XPathTestBase {
      */
     @Test(dataProvider = "document")
     public void test04(XPath xpath, Document doc) throws XPathExpressionException {
-        boolean result1 = xpath.evaluateExpression("boolean(/Customers/Customer[@id=3])", doc, Boolean.class);
+        boolean result1 = xpath.evaluateExpression("boolean" +
+                "(/Customers/Customer[@id=\"x3\"])", doc, Boolean.class);
         assertTrue(result1);
     }
 
@@ -121,7 +119,8 @@ public class XPathAnyTypeTest extends XPathTestBase {
      */
     @Test(dataProvider = "document")
     public void test07(XPath xpath, Document doc) throws XPathExpressionException {
-        String result1 = xpath.evaluateExpression("string(/Customers/Customer[@id=3]/Phone/text())", doc, String.class);
+        String result1 = xpath.evaluateExpression("string(/Customers/Customer" +
+                "[@id=\"x3\"]/Phone/text())", doc, String.class);
         assertTrue(result1.equals("3333333333"));
     }
 
@@ -142,7 +141,8 @@ public class XPathAnyTypeTest extends XPathTestBase {
      */
     @Test(dataProvider = "document")
     public void test09(XPath xpath, Document doc) throws XPathExpressionException {
-        Node n = xpath.evaluateExpression("/Customers/Customer[@id=3]", doc, Node.class);
+        Node n = xpath.evaluateExpression("/Customers/Customer[@id=\"x3\"]",
+                doc, Node.class);
         assertEquals(n.getLocalName(), "Customer");
     }
 
@@ -151,7 +151,8 @@ public class XPathAnyTypeTest extends XPathTestBase {
      */
     @Test(dataProvider = "document", expectedExceptions = IllegalArgumentException.class)
     public void test10(XPath xpath, Document doc) throws XPathExpressionException {
-        File n = xpath.evaluateExpression("/Customers/Customer[@id=3]", doc, File.class);
+        File n = xpath.evaluateExpression("/Customers/Customer[@id=\"x3\"]",
+                doc, File.class);
     }
 
     /*
@@ -159,7 +160,8 @@ public class XPathAnyTypeTest extends XPathTestBase {
      */
     @Test(dataProvider = "document")
     public void test11(XPath xpath, Document doc) throws XPathExpressionException {
-        XPathEvaluationResult<?> result = xpath.evaluateExpression("boolean(/Customers/Customer[@id=3])", doc);
+        XPathEvaluationResult<?> result = xpath.evaluateExpression(
+                "boolean(/Customers/Customer[@id=\"x3\"])", doc);
         verifyResult(result, true);
     }
 
@@ -178,7 +180,7 @@ public class XPathAnyTypeTest extends XPathTestBase {
     @Test(dataProvider = "document")
     public void test13(XPath xpath, Document doc) throws XPathExpressionException {
         XPathEvaluationResult<?> result = xpath.evaluateExpression(
-                "string(/Customers/Customer[@id=3]/Phone/text())", doc, XPathEvaluationResult.class);
+                "string(/Customers/Customer[@id=\"x3\"]/Phone/text())", doc, XPathEvaluationResult.class);
         verifyResult(result, "3333333333");
     }
 
@@ -196,7 +198,8 @@ public class XPathAnyTypeTest extends XPathTestBase {
      */
     @Test(dataProvider = "document")
     public void test15(XPath xpath, Document doc) throws XPathExpressionException {
-        XPathEvaluationResult<?> result = xpath.evaluateExpression("/Customers/Customer[@id=3]", doc);
+        XPathEvaluationResult<?> result = xpath.evaluateExpression(
+                "/Customers/Customer[@id=\"x3\"]", doc);
         verifyResult(result, "Customer");
     }
 }
