@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2019, 2021, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2019, 2025, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -23,17 +23,12 @@
 
 /*
  * @test
- * @modules java.base/sun.nio.ch
- *          jdk.incubator.foreign/jdk.internal.foreign
- * @run testng/othervm --enable-native-access=ALL-UNNAMED TestByteBuffer
+ * @modules java.base/sun.nio.ch java.base/jdk.internal.foreign
+ * @run testng/othervm/timeout=600 --enable-native-access=ALL-UNNAMED TestByteBuffer
  */
 
-import jdk.incubator.foreign.MemoryLayout;
-import jdk.incubator.foreign.MemoryAddress;
-import jdk.incubator.foreign.MemorySegment;
-import jdk.incubator.foreign.MemoryLayout.PathElement;
-import jdk.incubator.foreign.ResourceScope;
-import jdk.incubator.foreign.SequenceLayout;
+import java.lang.foreign.*;
+import java.lang.foreign.MemoryLayout.PathElement;
 
 import java.io.File;
 import java.io.IOException;
@@ -41,6 +36,7 @@ import java.lang.invoke.MethodHandle;
 import java.lang.invoke.MethodHandles;
 import java.lang.invoke.VarHandle;
 import java.lang.ref.Cleaner;
+import java.lang.ref.Reference;
 import java.lang.ref.WeakReference;
 import java.lang.reflect.InvocationTargetException;
 import java.lang.reflect.Method;
@@ -61,10 +57,10 @@ import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.StandardOpenOption;
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
+import java.util.concurrent.atomic.AtomicBoolean;
 import java.util.function.BiConsumer;
 import java.util.function.BiFunction;
 import java.util.function.Consumer;
@@ -73,25 +69,16 @@ import java.util.function.Predicate;
 import java.util.function.Supplier;
 import java.util.stream.Stream;
 
-import jdk.internal.foreign.HeapMemorySegmentImpl;
-import jdk.internal.foreign.MappedMemorySegmentImpl;
-import jdk.internal.foreign.NativeMemorySegmentImpl;
 import org.testng.SkipException;
 import org.testng.annotations.*;
 import sun.nio.ch.DirectBuffer;
 
-import static jdk.incubator.foreign.ValueLayout.JAVA_BYTE;
-import static jdk.incubator.foreign.ValueLayout.JAVA_CHAR;
-import static jdk.incubator.foreign.ValueLayout.JAVA_DOUBLE;
-import static jdk.incubator.foreign.ValueLayout.JAVA_FLOAT;
-import static jdk.incubator.foreign.ValueLayout.JAVA_INT;
-import static jdk.incubator.foreign.ValueLayout.JAVA_LONG;
-import static jdk.incubator.foreign.ValueLayout.JAVA_SHORT;
+import static java.lang.foreign.ValueLayout.*;
 import static org.testng.Assert.*;
 
 public class TestByteBuffer {
 
-    static Path tempPath;
+    static final Path tempPath;
 
     static {
         try {
@@ -105,47 +92,34 @@ public class TestByteBuffer {
         }
     }
 
+    static final ValueLayout.OfChar BB_CHAR = JAVA_CHAR_UNALIGNED.withOrder(ByteOrder.BIG_ENDIAN);
+    static final ValueLayout.OfShort BB_SHORT = JAVA_SHORT_UNALIGNED.withOrder(ByteOrder.BIG_ENDIAN);
+    static final ValueLayout.OfInt BB_INT = JAVA_INT_UNALIGNED.withOrder(ByteOrder.BIG_ENDIAN);
+    static final ValueLayout.OfLong BB_LONG = JAVA_LONG_UNALIGNED.withOrder(ByteOrder.BIG_ENDIAN);
+    static final ValueLayout.OfFloat BB_FLOAT = JAVA_FLOAT_UNALIGNED.withOrder(ByteOrder.BIG_ENDIAN);
+    static final ValueLayout.OfDouble BB_DOUBLE = JAVA_DOUBLE_UNALIGNED.withOrder(ByteOrder.BIG_ENDIAN);
+
     static SequenceLayout tuples = MemoryLayout.sequenceLayout(500,
             MemoryLayout.structLayout(
-                    JAVA_INT.withOrder(ByteOrder.BIG_ENDIAN).withName("index"),
-                    JAVA_FLOAT.withOrder(ByteOrder.BIG_ENDIAN).withName("value")
+                    BB_INT.withName("index"),
+                    BB_FLOAT.withName("value")
             ));
 
-    static SequenceLayout bytes = MemoryLayout.sequenceLayout(100,
-            JAVA_BYTE
-    );
+    static final SequenceLayout bytes = MemoryLayout.sequenceLayout(100, JAVA_BYTE);
+    static final SequenceLayout chars = MemoryLayout.sequenceLayout(100, BB_CHAR);
+    static final SequenceLayout shorts = MemoryLayout.sequenceLayout(100, BB_SHORT);
+    static final SequenceLayout ints = MemoryLayout.sequenceLayout(100, BB_INT);
+    static final SequenceLayout floats = MemoryLayout.sequenceLayout(100, BB_FLOAT);
+    static final SequenceLayout longs = MemoryLayout.sequenceLayout(100, BB_LONG);
+    static final SequenceLayout doubles = MemoryLayout.sequenceLayout(100, BB_DOUBLE);
 
-    static SequenceLayout chars = MemoryLayout.sequenceLayout(100,
-            JAVA_CHAR.withOrder(ByteOrder.BIG_ENDIAN)
-    );
-
-    static SequenceLayout shorts = MemoryLayout.sequenceLayout(100,
-            JAVA_SHORT.withOrder(ByteOrder.BIG_ENDIAN)
-    );
-
-    static SequenceLayout ints = MemoryLayout.sequenceLayout(100,
-            JAVA_INT.withOrder(ByteOrder.BIG_ENDIAN)
-    );
-
-    static SequenceLayout floats = MemoryLayout.sequenceLayout(100,
-            JAVA_FLOAT.withOrder(ByteOrder.BIG_ENDIAN)
-    );
-
-    static SequenceLayout longs = MemoryLayout.sequenceLayout(100,
-            JAVA_LONG.withOrder(ByteOrder.BIG_ENDIAN)
-    );
-
-    static SequenceLayout doubles = MemoryLayout.sequenceLayout(100,
-            JAVA_DOUBLE.withOrder(ByteOrder.BIG_ENDIAN)
-    );
-
-    static VarHandle indexHandle = tuples.varHandle(PathElement.sequenceElement(), PathElement.groupElement("index"));
-    static VarHandle valueHandle = tuples.varHandle(PathElement.sequenceElement(), PathElement.groupElement("value"));
+    static final VarHandle indexHandle = tuples.varHandle(PathElement.sequenceElement(), PathElement.groupElement("index"));
+    static final VarHandle valueHandle = tuples.varHandle(PathElement.sequenceElement(), PathElement.groupElement("value"));
 
     static void initTuples(MemorySegment base, long count) {
         for (long i = 0; i < count ; i++) {
-            indexHandle.set(base, i, (int)i);
-            valueHandle.set(base, i, (float)(i / 500f));
+            indexHandle.set(base, 0L, i, (int)i);
+            valueHandle.set(base, 0L, i, (float)(i / 500f));
         }
     }
 
@@ -153,14 +127,14 @@ public class TestByteBuffer {
         for (long i = 0; i < count ; i++) {
             int index;
             float value;
-            assertEquals(index = bb.getInt(), (int)indexHandle.get(base, i));
-            assertEquals(value = bb.getFloat(), (float)valueHandle.get(base, i));
+            assertEquals(index = bb.getInt(), (int)indexHandle.get(base, 0L, i));
+            assertEquals(value = bb.getFloat(), (float)valueHandle.get(base, 0L, i));
             assertEquals(value, index / 500f);
         }
     }
 
     static void initBytes(MemorySegment base, SequenceLayout seq, BiConsumer<MemorySegment, Long> handleSetter) {
-        for (long i = 0; i < seq.elementCount().getAsLong() ; i++) {
+        for (long i = 0; i < seq.elementCount() ; i++) {
             handleSetter.accept(base, i);
         }
     }
@@ -169,22 +143,26 @@ public class TestByteBuffer {
                                               Function<ByteBuffer, Z> bufFactory,
                                               BiFunction<MemorySegment, Long, Object> handleExtractor,
                                               Function<Z, Object> bufferExtractor) {
-        long nelems = layout.elementCount().getAsLong();
+        long nelems = layout.elementCount();
         long elemSize = layout.elementLayout().byteSize();
         for (long i = 0 ; i < nelems ; i++) {
             long limit = nelems - i;
             MemorySegment resizedSegment = base.asSlice(i * elemSize, limit * elemSize);
             ByteBuffer bb = resizedSegment.asByteBuffer();
             Z z = bufFactory.apply(bb);
+            MemorySegment segmentBufferView = MemorySegment.ofBuffer(z);
             for (long j = i ; j < limit ; j++) {
                 Object handleValue = handleExtractor.apply(resizedSegment, j - i);
                 Object bufferValue = bufferExtractor.apply(z);
+                Object handleViewValue = handleExtractor.apply(segmentBufferView, j - i);
                 if (handleValue instanceof Number) {
                     assertEquals(((Number)handleValue).longValue(), j);
                     assertEquals(((Number)bufferValue).longValue(), j);
+                    assertEquals(((Number)handleViewValue).longValue(), j);
                 } else {
                     assertEquals((long)(char)handleValue, j);
                     assertEquals((long)(char)bufferValue, j);
+                    assertEquals((long)(char)handleViewValue, j);
                 }
             }
         }
@@ -192,12 +170,12 @@ public class TestByteBuffer {
 
     @Test
     public void testOffheap() {
-        try (ResourceScope scope = ResourceScope.newConfinedScope()) {
-            MemorySegment segment = MemorySegment.allocateNative(tuples, scope);
-            initTuples(segment, tuples.elementCount().getAsLong());
+        try (Arena arena = Arena.ofConfined()) {
+            MemorySegment segment = arena.allocate(tuples);
+            initTuples(segment, tuples.elementCount());
 
             ByteBuffer bb = segment.asByteBuffer();
-            checkTuples(segment, bb, tuples.elementCount().getAsLong());
+            checkTuples(segment, bb, tuples.elementCount());
         }
     }
 
@@ -205,10 +183,10 @@ public class TestByteBuffer {
     public void testHeap() {
         byte[] arr = new byte[(int) tuples.byteSize()];
         MemorySegment region = MemorySegment.ofArray(arr);
-        initTuples(region, tuples.elementCount().getAsLong());
+        initTuples(region, tuples.elementCount());
 
         ByteBuffer bb = region.asByteBuffer();
-        checkTuples(region, bb, tuples.elementCount().getAsLong());
+        checkTuples(region, bb, tuples.elementCount());
     }
 
     @Test
@@ -220,8 +198,8 @@ public class TestByteBuffer {
         //write to channel
         try (FileChannel channel = FileChannel.open(f.toPath(), StandardOpenOption.READ, StandardOpenOption.WRITE)) {
             withMappedBuffer(channel, FileChannel.MapMode.READ_WRITE, 0, tuples.byteSize(), mbb -> {
-                MemorySegment segment = MemorySegment.ofByteBuffer(mbb);
-                initTuples(segment, tuples.elementCount().getAsLong());
+                MemorySegment segment = MemorySegment.ofBuffer(mbb);
+                initTuples(segment, tuples.elementCount());
                 mbb.force();
             });
         }
@@ -229,21 +207,23 @@ public class TestByteBuffer {
         //read from channel
         try (FileChannel channel = FileChannel.open(f.toPath(), StandardOpenOption.READ)) {
             withMappedBuffer(channel, FileChannel.MapMode.READ_ONLY, 0, tuples.byteSize(), mbb -> {
-                MemorySegment segment = MemorySegment.ofByteBuffer(mbb);
-                checkTuples(segment, mbb, tuples.elementCount().getAsLong());
+                MemorySegment segment = MemorySegment.ofBuffer(mbb);
+                checkTuples(segment, mbb, tuples.elementCount());
             });
         }
     }
 
     @Test
     public void testDefaultAccessModesMappedSegment() throws Throwable {
-        try (ResourceScope scope = ResourceScope.newConfinedScope()) {
-            MemorySegment segment = MemorySegment.mapFile(tempPath, 0L, 8, FileChannel.MapMode.READ_WRITE, scope);
+        try (Arena arena = Arena.ofConfined();
+             FileChannel fileChannel = FileChannel.open(tempPath, StandardOpenOption.READ, StandardOpenOption.WRITE)) {
+            MemorySegment segment = fileChannel.map(FileChannel.MapMode.READ_WRITE, 0L, 8L, arena);
             assertFalse(segment.isReadOnly());
         }
 
-        try (ResourceScope scope = ResourceScope.newConfinedScope()) {
-            MemorySegment segment = MemorySegment.mapFile(tempPath, 0L, 8, FileChannel.MapMode.READ_ONLY, scope);
+        try (Arena arena = Arena.ofConfined();
+             FileChannel fileChannel = FileChannel.open(tempPath, StandardOpenOption.READ)) {
+            MemorySegment segment = fileChannel.map(FileChannel.MapMode.READ_ONLY, 0L, 8L, arena);
             assertTrue(segment.isReadOnly());
         }
     }
@@ -254,17 +234,19 @@ public class TestByteBuffer {
         f.createNewFile();
         f.deleteOnExit();
 
-        try (ResourceScope scope = ResourceScope.newConfinedScope()) {
+        try (Arena arena = Arena.ofConfined();
+             FileChannel fileChannel = FileChannel.open(f.toPath(), StandardOpenOption.READ, StandardOpenOption.WRITE)) {
             //write to channel
-            MemorySegment segment = MemorySegment.mapFile(f.toPath(), 0L, tuples.byteSize(), FileChannel.MapMode.READ_WRITE, scope);
-            initTuples(segment, tuples.elementCount().getAsLong());
+            MemorySegment segment = fileChannel.map(FileChannel.MapMode.READ_WRITE, 0L, tuples.byteSize(), arena);
+            initTuples(segment, tuples.elementCount());
             segment.force();
         }
 
-        try (ResourceScope scope = ResourceScope.newConfinedScope()) {
+        try (Arena arena = Arena.ofConfined();
+             FileChannel fileChannel = FileChannel.open(f.toPath(), StandardOpenOption.READ)) {
             //read from channel
-            MemorySegment segment = MemorySegment.mapFile(f.toPath(), 0L, tuples.byteSize(), FileChannel.MapMode.READ_ONLY, scope);
-            checkTuples(segment, segment.asByteBuffer(), tuples.elementCount().getAsLong());
+            MemorySegment segment = fileChannel.map(FileChannel.MapMode.READ_ONLY, 0L, tuples.byteSize(), arena);
+            checkTuples(segment, segment.asByteBuffer(), tuples.elementCount());
         }
     }
 
@@ -274,10 +256,14 @@ public class TestByteBuffer {
         f.createNewFile();
         f.deleteOnExit();
 
-        MemorySegment segment = MemorySegment.mapFile(f.toPath(), 0L, 8, FileChannel.MapMode.READ_WRITE, ResourceScope.newImplicitScope());
-        assertTrue(segment.isMapped());
-        segment.scope().close();
-        mappedBufferOp.apply(segment);
+        Arena arena = Arena.ofConfined();
+        try (FileChannel fileChannel = FileChannel.open(f.toPath(), StandardOpenOption.READ, StandardOpenOption.WRITE)) {
+            MemorySegment segment = fileChannel.map(FileChannel.MapMode.READ_WRITE, 0L, 8L, arena);
+            assertTrue(segment.isMapped());
+            assertTrue(segment.toString().contains("mapped"));
+            arena.close();
+            mappedBufferOp.apply(segment);
+        }
     }
 
     @Test
@@ -290,9 +276,10 @@ public class TestByteBuffer {
 
         // write one at a time
         for (int i = 0 ; i < tuples.byteSize() ; i += tupleLayout.byteSize()) {
-            try (ResourceScope scope = ResourceScope.newConfinedScope()) {
+            try (Arena arena = Arena.ofConfined();
+                 FileChannel fileChannel = FileChannel.open(f.toPath(), StandardOpenOption.READ, StandardOpenOption.WRITE)) {
                 //write to channel
-                MemorySegment segment = MemorySegment.mapFile(f.toPath(), i, tuples.byteSize(), FileChannel.MapMode.READ_WRITE, scope);
+                MemorySegment segment = fileChannel.map(FileChannel.MapMode.READ_WRITE, i, tuples.byteSize(), arena);
                 initTuples(segment, 1);
                 segment.force();
             }
@@ -300,15 +287,55 @@ public class TestByteBuffer {
 
         // check one at a time
         for (int i = 0 ; i < tuples.byteSize() ; i += tupleLayout.byteSize()) {
-            try (ResourceScope scope = ResourceScope.newConfinedScope()) {
+            try (Arena arena = Arena.ofConfined();
+                 FileChannel fileChannel = FileChannel.open(f.toPath(), StandardOpenOption.READ)) {
                 //read from channel
-                MemorySegment segment = MemorySegment.mapFile(f.toPath(), 0L, tuples.byteSize(), FileChannel.MapMode.READ_ONLY, scope);
+                MemorySegment segment = fileChannel.map(FileChannel.MapMode.READ_ONLY, 0L, tuples.byteSize(), arena);
                 checkTuples(segment, segment.asByteBuffer(), 1);
             }
         }
     }
 
-    static final long LARGE_SIZE = 3L * 1024L * 1024L * 1024L; // 3GB
+    @Test(dataProvider = "fromArrays")
+    public void testAsByteBufferFromNonByteArray(MemorySegment segment) {
+        if (!segment.heapBase().map(a -> a instanceof byte[]).get()) {
+            // This should not work as the segment is not backed by a byte array
+            assertThrows(UnsupportedOperationException.class, segment::asByteBuffer);
+        }
+    }
+
+    @Test
+    public void testMappedSegmentAsByteBuffer() throws Throwable {
+        File f = new File("test4.out");
+        assertTrue(f.createNewFile());
+        f.deleteOnExit();
+
+        for (var mapOption : List.of(FileChannel.MapMode.READ_WRITE, FileChannel.MapMode.READ_ONLY, FileChannel.MapMode.PRIVATE)) {
+            for (var arena : List.of(Arena.ofConfined(), Arena.global())) {
+                try (FileChannel fileChannel = FileChannel.open(f.toPath(), StandardOpenOption.READ, StandardOpenOption.WRITE)) {
+                    //write to channel
+                    MemorySegment segment = fileChannel.map(mapOption, 0L, 32L, arena);
+                    segment.force();
+                    segment.load();
+                    segment.isLoaded();
+                    segment.unload();
+                    ByteBuffer byteBuffer = segment.asByteBuffer();
+                    assertEquals(byteBuffer.capacity(), segment.byteSize());
+                    assertEquals(byteBuffer.isReadOnly(), segment.isReadOnly());
+                    assertTrue(byteBuffer.isDirect());
+                } catch (IOException e) {
+                    if (e.getMessage().equals("Function not implemented"))
+                        throw new SkipException(e.getMessage(), e);
+                } finally {
+                    if (arena.scope() != Arena.global().scope()) {
+                        arena.close();
+                    }
+                }
+            }
+        }
+    }
+
+    static final long LARGE_SIZE = (2L * 1024L + 512L) * 1024L * 1024L; // 2.5 GiB
 
     @Test
     public void testLargeMappedSegment() throws Throwable {
@@ -320,8 +347,9 @@ public class TestByteBuffer {
         f.createNewFile();
         f.deleteOnExit();
 
-        try (ResourceScope scope = ResourceScope.newConfinedScope()) {
-            MemorySegment segment = MemorySegment.mapFile(f.toPath(), 0, LARGE_SIZE, FileChannel.MapMode.READ_WRITE, scope);
+        try (Arena arena = Arena.ofConfined();
+             FileChannel fileChannel = FileChannel.open(f.toPath(), StandardOpenOption.READ, StandardOpenOption.WRITE)) {
+            MemorySegment segment = fileChannel.map(FileChannel.MapMode.READ_WRITE, 0L, LARGE_SIZE, arena);
             segment.isLoaded();
             segment.load();
             segment.isLoaded();
@@ -348,7 +376,7 @@ public class TestByteBuffer {
     }
 
     static void checkByteArrayAlignment(MemoryLayout layout) {
-        if (layout.bitSize() > 32
+        if (layout.byteSize() > 4
                 && System.getProperty("sun.arch.data.model").equals("32")) {
             throw new SkipException("avoid unaligned access on 32-bit system");
         }
@@ -357,19 +385,19 @@ public class TestByteBuffer {
     @Test(dataProvider = "bufferOps")
     public void testScopedBuffer(Function<ByteBuffer, Buffer> bufferFactory, @NoInjection Method method, Object[] args) {
         Buffer bb;
-        try (ResourceScope scope = ResourceScope.newConfinedScope()) {
-            MemorySegment segment = MemorySegment.allocateNative(bytes, scope);
+        try (Arena arena = Arena.ofConfined()) {
+            MemorySegment segment = arena.allocate(bytes);
             bb = bufferFactory.apply(segment.asByteBuffer());
         }
-        //outside of scope!!
+        //outside of session!!
         try {
             method.invoke(bb, args);
             fail("Exception expected");
         } catch (InvocationTargetException ex) {
             Throwable cause = ex.getCause();
             if (cause instanceof IllegalStateException) {
-                //all get/set buffer operation should fail because of the scope check
-                assertTrue(ex.getCause().getMessage().contains("already closed"));
+                //all get/set buffer operation should fail because of the session check
+                assertTrue(ex.getCause().getMessage().contains("Already closed"));
             } else {
                 //all other exceptions were unexpected - fail
                 fail("Unexpected exception", cause);
@@ -383,8 +411,8 @@ public class TestByteBuffer {
     @Test(dataProvider = "bufferHandleOps")
     public void testScopedBufferAndVarHandle(VarHandle bufferHandle) {
         ByteBuffer bb;
-        try (ResourceScope scope = ResourceScope.newConfinedScope()) {
-            MemorySegment segment = MemorySegment.allocateNative(bytes, scope);
+        try (Arena arena = Arena.ofConfined()) {
+            MemorySegment segment = arena.allocate(bytes, Long.BYTES);
             bb = segment.asByteBuffer();
             for (Map.Entry<MethodHandle, Object[]> e : varHandleMembers(bb, bufferHandle).entrySet()) {
                 MethodHandle handle = e.getKey().bindTo(bufferHandle)
@@ -406,7 +434,7 @@ public class TestByteBuffer {
                 handle.invoke(e.getValue());
                 fail();
             } catch (IllegalStateException ex) {
-                assertTrue(ex.getMessage().contains("already closed"));
+                assertTrue(ex.getMessage().contains("Already closed"));
             } catch (UnsupportedOperationException ex) {
                 //skip
             } catch (Throwable ex) {
@@ -417,12 +445,12 @@ public class TestByteBuffer {
 
     @Test(dataProvider = "bufferOps")
     public void testDirectBuffer(Function<ByteBuffer, Buffer> bufferFactory, @NoInjection Method method, Object[] args) {
-        try (ResourceScope scope = ResourceScope.newConfinedScope()) {
-            MemorySegment segment = MemorySegment.allocateNative(bytes, scope);
+        try (Arena arena = Arena.ofConfined()) {
+            MemorySegment segment = arena.allocate(bytes);
             Buffer bb = bufferFactory.apply(segment.asByteBuffer());
             assertTrue(bb.isDirect());
             DirectBuffer directBuffer = ((DirectBuffer)bb);
-            assertEquals(directBuffer.address(), segment.address().toRawLongValue());
+            assertEquals(directBuffer.address(), segment.address());
             assertTrue((directBuffer.attachment() == null) == (bb instanceof ByteBuffer));
             assertTrue(directBuffer.cleaner() == null);
         }
@@ -430,8 +458,8 @@ public class TestByteBuffer {
 
     @Test(dataProvider="resizeOps")
     public void testResizeOffheap(Consumer<MemorySegment> checker, Consumer<MemorySegment> initializer, SequenceLayout seq) {
-        try (ResourceScope scope = ResourceScope.newConfinedScope()) {
-            MemorySegment segment = MemorySegment.allocateNative(seq, scope);
+        try (Arena arena = Arena.ofConfined()) {
+            MemorySegment segment = arena.allocate(seq);
             initializer.accept(segment);
             checker.accept(segment);
         }
@@ -450,7 +478,7 @@ public class TestByteBuffer {
     public void testResizeBuffer(Consumer<MemorySegment> checker, Consumer<MemorySegment> initializer, SequenceLayout seq) {
         checkByteArrayAlignment(seq.elementLayout());
         int capacity = (int)seq.byteSize();
-        MemorySegment base = MemorySegment.ofByteBuffer(ByteBuffer.wrap(new byte[capacity]));
+        MemorySegment base = MemorySegment.ofBuffer(ByteBuffer.wrap(new byte[capacity]));
         initializer.accept(base);
         checker.accept(base);
     }
@@ -462,25 +490,25 @@ public class TestByteBuffer {
         byte[] arr = new byte[capacity];
         MemorySegment segment = MemorySegment.ofArray(arr);
         initializer.accept(segment);
-        MemorySegment second = MemorySegment.ofByteBuffer(segment.asByteBuffer());
+        MemorySegment second = MemorySegment.ofBuffer(segment.asByteBuffer());
         checker.accept(second);
     }
 
     @Test(dataProvider="resizeOps")
     public void testResizeRoundtripNative(Consumer<MemorySegment> checker, Consumer<MemorySegment> initializer, SequenceLayout seq) {
-        try (ResourceScope scope = ResourceScope.newConfinedScope()) {
-            MemorySegment segment = MemorySegment.allocateNative(seq, scope);
+        try (Arena arena = Arena.ofConfined()) {
+            MemorySegment segment = arena.allocate(seq);
             initializer.accept(segment);
-            MemorySegment second = MemorySegment.ofByteBuffer(segment.asByteBuffer());
+            MemorySegment second = MemorySegment.ofBuffer(segment.asByteBuffer());
             checker.accept(second);
         }
     }
 
     @Test(expectedExceptions = IllegalStateException.class)
-    public void testBufferOnClosedScope() {
+    public void testBufferOnClosedSession() {
         MemorySegment leaked;
-        try (ResourceScope scope = ResourceScope.newConfinedScope()) {
-            leaked = MemorySegment.allocateNative(bytes, scope);
+        try (Arena arena = Arena.ofConfined()) {
+            leaked = arena.allocate(bytes);
         }
         ByteBuffer byteBuffer = leaked.asByteBuffer(); // ok
         byteBuffer.get(); // should throw
@@ -488,7 +516,7 @@ public class TestByteBuffer {
 
     @Test(expectedExceptions = IllegalStateException.class)
     public void testTooBigForByteBuffer() {
-        MemorySegment segment = MemorySegment.ofAddress(MemoryAddress.NULL, Integer.MAX_VALUE + 10L, ResourceScope.newImplicitScope());
+        MemorySegment segment = MemorySegment.NULL.reinterpret(Integer.MAX_VALUE + 10L);
         segment.asByteBuffer();
     }
 
@@ -497,7 +525,9 @@ public class TestByteBuffer {
         File f = new File("testNeg1.out");
         f.createNewFile();
         f.deleteOnExit();
-        MemorySegment.mapFile(f.toPath(), 0L, -1, FileChannel.MapMode.READ_WRITE, ResourceScope.newImplicitScope());
+        try (FileChannel fileChannel = FileChannel.open(f.toPath(), StandardOpenOption.READ, StandardOpenOption.WRITE)) {
+            fileChannel.map(FileChannel.MapMode.READ_WRITE, 0L, -1L, Arena.ofAuto());
+        }
     }
 
     @Test(expectedExceptions = IllegalArgumentException.class)
@@ -505,7 +535,9 @@ public class TestByteBuffer {
         File f = new File("testNeg2.out");
         f.createNewFile();
         f.deleteOnExit();
-        MemorySegment.mapFile(f.toPath(), -1, 1, FileChannel.MapMode.READ_WRITE, ResourceScope.newImplicitScope());
+        try (FileChannel fileChannel = FileChannel.open(f.toPath(), StandardOpenOption.READ, StandardOpenOption.WRITE)) {
+            fileChannel.map(FileChannel.MapMode.READ_WRITE, -1L, 1L, Arena.ofAuto());
+        }
     }
 
     @Test
@@ -516,8 +548,9 @@ public class TestByteBuffer {
 
         int SIZE = Byte.MAX_VALUE;
 
-        try (ResourceScope scope = ResourceScope.newConfinedScope()) {
-            MemorySegment segment = MemorySegment.mapFile(f.toPath(), 0, SIZE, FileChannel.MapMode.READ_WRITE, scope);
+        try (Arena arena = Arena.ofConfined();
+             FileChannel fileChannel = FileChannel.open(f.toPath(), StandardOpenOption.READ, StandardOpenOption.WRITE)) {
+            MemorySegment segment = fileChannel.map(FileChannel.MapMode.READ_WRITE, 0L, SIZE, arena);
             for (byte offset = 0; offset < SIZE; offset++) {
                 segment.set(JAVA_BYTE, offset, offset);
             }
@@ -525,8 +558,9 @@ public class TestByteBuffer {
         }
 
         for (int offset = 0 ; offset < SIZE ; offset++) {
-            try (ResourceScope scope = ResourceScope.newConfinedScope()) {
-                MemorySegment segment = MemorySegment.mapFile(f.toPath(), offset, SIZE - offset, FileChannel.MapMode.READ_ONLY, scope);
+            try (Arena arena = Arena.ofConfined();
+                 FileChannel fileChannel = FileChannel.open(f.toPath(), StandardOpenOption.READ)) {
+                MemorySegment segment = fileChannel.map(FileChannel.MapMode.READ_ONLY, offset, SIZE - offset, arena);
                 assertEquals(segment.get(JAVA_BYTE, 0), offset);
             }
         }
@@ -538,8 +572,9 @@ public class TestByteBuffer {
         f.createNewFile();
         f.deleteOnExit();
         //RW
-        try (ResourceScope scope = ResourceScope.newConfinedScope()) {
-            MemorySegment segment = MemorySegment.mapFile(f.toPath(), 0L, 0L, FileChannel.MapMode.READ_WRITE, scope);
+        try (Arena arena = Arena.ofConfined();
+             FileChannel fileChannel = FileChannel.open(f.toPath(), StandardOpenOption.READ, StandardOpenOption.WRITE)) {
+            MemorySegment segment = fileChannel.map(FileChannel.MapMode.READ_WRITE, 0L, 0L, arena);
             assertEquals(segment.byteSize(), 0);
             assertEquals(segment.isMapped(), true);
             assertFalse(segment.isReadOnly());
@@ -547,10 +582,14 @@ public class TestByteBuffer {
             segment.load();
             segment.isLoaded();
             segment.unload();
+            ByteBuffer byteBuffer = segment.asByteBuffer();
+            assertEquals(byteBuffer.capacity(), 0);
+            assertFalse(byteBuffer.isReadOnly());
         }
         //RO
-        try (ResourceScope scope = ResourceScope.newConfinedScope()) {
-            MemorySegment segment = MemorySegment.mapFile(f.toPath(), 0L, 0L, FileChannel.MapMode.READ_ONLY, scope);
+        try (Arena arena = Arena.ofConfined();
+             FileChannel fileChannel = FileChannel.open(f.toPath(), StandardOpenOption.READ)) {
+            MemorySegment segment = fileChannel.map(FileChannel.MapMode.READ_ONLY, 0L, 0L, arena);
             assertEquals(segment.byteSize(), 0);
             assertEquals(segment.isMapped(), true);
             assertTrue(segment.isReadOnly());
@@ -558,21 +597,26 @@ public class TestByteBuffer {
             segment.load();
             segment.isLoaded();
             segment.unload();
+            ByteBuffer byteBuffer = segment.asByteBuffer();
+            assertEquals(byteBuffer.capacity(), 0);
+            assertTrue(byteBuffer.isReadOnly());
         }
     }
 
-    @Test(expectedExceptions = IllegalArgumentException.class)
+    @Test(expectedExceptions = UnsupportedOperationException.class)
     public void testMapCustomPath() throws IOException {
         Path path = Path.of(URI.create("jrt:/"));
-        MemorySegment.mapFile(path, 0L, 0L, FileChannel.MapMode.READ_WRITE, ResourceScope.newImplicitScope());
+        try (FileChannel fileChannel = FileChannel.open(path, StandardOpenOption.READ, StandardOpenOption.WRITE)) {
+            fileChannel.map(FileChannel.MapMode.READ_WRITE, 0L, 0L, Arena.ofAuto());
+        }
     }
 
     @Test(dataProvider="resizeOps")
     public void testCopyHeapToNative(Consumer<MemorySegment> checker, Consumer<MemorySegment> initializer, SequenceLayout seq) {
         checkByteArrayAlignment(seq.elementLayout());
         int bytes = (int)seq.byteSize();
-        try (ResourceScope scope = ResourceScope.newConfinedScope()) {
-            MemorySegment nativeArray = MemorySegment.allocateNative(bytes, 1, scope);
+        try (Arena arena = Arena.ofConfined()) {
+            MemorySegment nativeArray = arena.allocate(bytes, 1);
             MemorySegment heapArray = MemorySegment.ofArray(new byte[bytes]);
             initializer.accept(heapArray);
             nativeArray.copyFrom(heapArray);
@@ -584,8 +628,8 @@ public class TestByteBuffer {
     public void testCopyNativeToHeap(Consumer<MemorySegment> checker, Consumer<MemorySegment> initializer, SequenceLayout seq) {
         checkByteArrayAlignment(seq.elementLayout());
         int bytes = (int)seq.byteSize();
-        try (ResourceScope scope = ResourceScope.newConfinedScope()) {
-            MemorySegment nativeArray = MemorySegment.allocateNative(seq, scope);
+        try (Arena arena = Arena.ofConfined()) {
+            MemorySegment nativeArray = arena.allocate(seq);
             MemorySegment heapArray = MemorySegment.ofArray(new byte[bytes]);
             initializer.accept(nativeArray);
             heapArray.copyFrom(nativeArray);
@@ -597,26 +641,48 @@ public class TestByteBuffer {
     public void testDefaultAccessModesOfBuffer() {
         ByteBuffer rwBuffer = ByteBuffer.wrap(new byte[4]);
         {
-            MemorySegment segment = MemorySegment.ofByteBuffer(rwBuffer);
+            MemorySegment segment = MemorySegment.ofBuffer(rwBuffer);
             assertFalse(segment.isReadOnly());
         }
 
         {
             ByteBuffer roBuffer = rwBuffer.asReadOnlyBuffer();
-            MemorySegment segment = MemorySegment.ofByteBuffer(roBuffer);
+            MemorySegment segment = MemorySegment.ofBuffer(roBuffer);
             assertTrue(segment.isReadOnly());
+        }
+    }
+
+    @Test
+    public void testOfBufferScopeReachable() throws InterruptedException {
+        ByteBuffer buffer = ByteBuffer.allocateDirect(1000);
+        MemorySegment segment = MemorySegment.ofBuffer(buffer);
+        try {
+            AtomicBoolean reachable = new AtomicBoolean(true);
+            Cleaner.create().register(buffer, () -> {
+                reachable.set(false);
+            });
+            buffer = null;
+            System.gc();
+            // let's sleep to let cleaner run
+            Thread.sleep(100);
+            segment.get(JAVA_BYTE, 0);
+            if (!reachable.get()) {
+                throw new IllegalStateException();
+            }
+        } finally {
+            Reference.reachabilityFence(segment);
         }
     }
 
     @Test(dataProvider="bufferSources")
     public void testBufferToSegment(ByteBuffer bb, Predicate<MemorySegment> segmentChecker) {
-        MemorySegment segment = MemorySegment.ofByteBuffer(bb);
+        MemorySegment segment = MemorySegment.ofBuffer(bb);
         assertEquals(segment.isReadOnly(), bb.isReadOnly());
         assertTrue(segmentChecker.test(segment));
         assertTrue(segmentChecker.test(segment.asSlice(0, segment.byteSize())));
         assertEquals(bb.capacity(), segment.byteSize());
         //another round trip
-        segment = MemorySegment.ofByteBuffer(segment.asByteBuffer());
+        segment = MemorySegment.ofBuffer(segment.asByteBuffer());
         assertEquals(segment.isReadOnly(), bb.isReadOnly());
         assertTrue(segmentChecker.test(segment));
         assertTrue(segmentChecker.test(segment.asSlice(0, segment.byteSize())));
@@ -625,7 +691,7 @@ public class TestByteBuffer {
 
     @Test(dataProvider="bufferSources")
     public void bufferProperties(ByteBuffer bb, Predicate<MemorySegment> _unused) {
-        MemorySegment segment = MemorySegment.ofByteBuffer(bb);
+        MemorySegment segment = MemorySegment.ofBuffer(bb);
         ByteBuffer buffer = segment.asByteBuffer();
         assertEquals(buffer.position(), 0);
         assertEquals(buffer.capacity(), segment.byteSize());
@@ -634,33 +700,49 @@ public class TestByteBuffer {
 
     @Test
     public void testRoundTripAccess() {
-        try (ResourceScope scope = ResourceScope.newConfinedScope()) {
-            MemorySegment ms = MemorySegment.allocateNative(4, 1, scope);
+        try (Arena arena = Arena.ofConfined()) {
+            MemorySegment ms = arena.allocate(4, 1);
             MemorySegment msNoAccess = ms.asReadOnly();
-            MemorySegment msRoundTrip = MemorySegment.ofByteBuffer(msNoAccess.asByteBuffer());
+            MemorySegment msRoundTrip = MemorySegment.ofBuffer(msNoAccess.asByteBuffer());
+            assertEquals(msRoundTrip.scope(), ms.scope());
             assertEquals(msNoAccess.isReadOnly(), msRoundTrip.isReadOnly());
         }
     }
 
+    @Test(dataProvider = "bufferFactories")
+    public void testDerivedBufferScopes(Supplier<Buffer> bufferFactory) {
+        MemorySegment segment = MemorySegment.ofBuffer(bufferFactory.get());
+        assertEquals(segment.scope(), segment.scope());
+        // one level
+        assertEquals(segment.asSlice(0).scope(), segment.scope());
+        assertEquals(segment.asReadOnly().scope(), segment.scope());
+        // two levels
+        assertEquals(segment.asSlice(0).asReadOnly().scope(), segment.scope());
+        assertEquals(segment.asReadOnly().asSlice(0).scope(), segment.scope());
+        // check fresh every time
+        MemorySegment another = MemorySegment.ofBuffer(bufferFactory.get());
+        assertNotEquals(segment.scope(), another.scope());
+    }
+
     @Test(expectedExceptions = IllegalStateException.class)
     public void testDeadAccessOnClosedBufferSegment() {
-        MemorySegment s1 = MemorySegment.allocateNative(JAVA_INT, ResourceScope.newConfinedScope());
-        MemorySegment s2 = MemorySegment.ofByteBuffer(s1.asByteBuffer());
+        Arena arena = Arena.ofConfined();
+        MemorySegment s1 = arena.allocate(JAVA_INT);
+        MemorySegment s2 = MemorySegment.ofBuffer(s1.asByteBuffer());
 
         // memory freed
-        s1.scope().close();
+        arena.close();
 
         s2.set(JAVA_INT, 0, 10); // Dead access!
     }
 
-    @Test(dataProvider = "allScopes")
-    public void testIOOnSegmentBuffer(Supplier<ResourceScope> scopeSupplier) throws IOException {
+    @Test(dataProvider = "closeableArenas")
+    public void closeableArenas(Supplier<Arena> arenaSupplier) throws IOException {
         File tmp = File.createTempFile("tmp", "txt");
         tmp.deleteOnExit();
-        ResourceScope scope;
         try (FileChannel channel = FileChannel.open(tmp.toPath(), StandardOpenOption.READ, StandardOpenOption.WRITE) ;
-             ResourceScope scp = closeableScopeOrNull(scope = scopeSupplier.get())) {
-            MemorySegment segment = MemorySegment.allocateNative(10, 1, scope);
+            Arena arena = arenaSupplier.get()) {
+            MemorySegment segment = arena.allocate(10, 1);
             for (int i = 0; i < 10; i++) {
                 segment.set(JAVA_BYTE, i, (byte) i);
             }
@@ -675,17 +757,18 @@ public class TestByteBuffer {
 
     static final Class<IllegalStateException> ISE = IllegalStateException.class;
 
-    @Test(dataProvider = "closeableScopes")
-    public void testIOOnClosedSegmentBuffer(Supplier<ResourceScope> scopeSupplier) throws IOException {
+    @Test(dataProvider = "closeableArenas")
+    public void testIOOnClosedSegmentBuffer(Supplier<Arena> arenaSupplier) throws IOException {
         File tmp = File.createTempFile("tmp", "txt");
         tmp.deleteOnExit();
+        Arena arena = arenaSupplier.get();
         try (FileChannel channel = FileChannel.open(tmp.toPath(), StandardOpenOption.READ, StandardOpenOption.WRITE)) {
-            MemorySegment segment = MemorySegment.allocateNative(10, scopeSupplier.get());
+            MemorySegment segment = arena.allocate(10, 1);
             for (int i = 0; i < 10; i++) {
                 segment.set(JAVA_BYTE, i, (byte) i);
             }
             ByteBuffer bb = segment.asByteBuffer();
-            segment.scope().close();
+            arena.close();
             assertThrows(ISE, () -> channel.read(bb));
             assertThrows(ISE, () -> channel.read(new ByteBuffer[] {bb}));
             assertThrows(ISE, () -> channel.read(new ByteBuffer[] {bb}, 0, 1));
@@ -697,8 +780,8 @@ public class TestByteBuffer {
 
     @Test
     public void buffersAndArraysFromSlices() {
-        try (ResourceScope scope = ResourceScope.newSharedScope()) {
-            MemorySegment segment = MemorySegment.allocateNative(16, scope);
+        try (Arena arena = Arena.ofShared()) {
+            MemorySegment segment = arena.allocate(16, 1);
             int newSize = 8;
             var slice = segment.asSlice(4, newSize);
 
@@ -715,8 +798,8 @@ public class TestByteBuffer {
 
     @Test
     public void viewsFromSharedSegment() {
-        try (ResourceScope scope = ResourceScope.newSharedScope()) {
-            MemorySegment segment = MemorySegment.allocateNative(16, scope);
+        try (Arena arena = Arena.ofShared()) {
+            MemorySegment segment = arena.allocate(16, 1);
             var byteBuffer = segment.asByteBuffer();
             byteBuffer.asReadOnlyBuffer();
             byteBuffer.slice(0, 8);
@@ -726,34 +809,18 @@ public class TestByteBuffer {
     @DataProvider(name = "segments")
     public static Object[][] segments() throws Throwable {
         return new Object[][] {
-                { (Supplier<MemorySegment>) () -> MemorySegment.allocateNative(16, ResourceScope.newImplicitScope()) },
-                { (Supplier<MemorySegment>) () -> MemorySegment.allocateNative(16, ResourceScope.newConfinedScope()) },
+                { (Supplier<MemorySegment>) () -> Arena.ofAuto().allocate(16, 1)},
+                { (Supplier<MemorySegment>) () -> Arena.ofConfined().allocate(16, 1)},
                 { (Supplier<MemorySegment>) () -> MemorySegment.ofArray(new byte[16]) }
         };
     }
 
-    @DataProvider(name = "closeableScopes")
-    public static Object[][] closeableScopes() {
+    @DataProvider(name = "closeableArenas")
+    public static Object[][] closeableArenas() {
         return new Object[][] {
-                { (Supplier<ResourceScope>) () -> ResourceScope.newSharedScope()   },
-                { (Supplier<ResourceScope>) () -> ResourceScope.newConfinedScope() },
-                { (Supplier<ResourceScope>) () -> ResourceScope.newSharedScope(Cleaner.create())   },
-                { (Supplier<ResourceScope>) () -> ResourceScope.newConfinedScope(Cleaner.create()) },
-                { (Supplier<ResourceScope>) () -> ResourceScope.newImplicitScope() }
+                { (Supplier<Arena>) Arena::ofConfined},
+                { (Supplier<Arena>) Arena::ofShared},
         };
-    }
-
-    @DataProvider(name = "allScopes")
-    public static Object[][] allScopes() {
-        return Stream.of(new Object[][] { { (Supplier<ResourceScope>)ResourceScope::globalScope } }, closeableScopes())
-                .flatMap(Arrays::stream)
-                .toArray(Object[][]::new);
-    }
-
-    static ResourceScope closeableScopeOrNull(ResourceScope scope) {
-        if (scope == ResourceScope.globalScope())
-            return null;
-        return scope;
     }
 
     @DataProvider(name = "bufferOps")
@@ -816,32 +883,32 @@ public class TestByteBuffer {
         Consumer<MemorySegment> byteInitializer =
                 (base) -> initBytes(base, bytes, (addr, pos) -> addr.set(JAVA_BYTE, pos, (byte)(long)pos));
         Consumer<MemorySegment> charInitializer =
-                (base) -> initBytes(base, chars, (addr, pos) -> addr.setAtIndex(JAVA_CHAR.withOrder(ByteOrder.BIG_ENDIAN), pos, (char)(long)pos));
+                (base) -> initBytes(base, chars, (addr, pos) -> addr.setAtIndex(BB_CHAR, pos, (char)(long)pos));
         Consumer<MemorySegment> shortInitializer =
-                (base) -> initBytes(base, shorts, (addr, pos) -> addr.setAtIndex(JAVA_SHORT.withOrder(ByteOrder.BIG_ENDIAN), pos, (short)(long)pos));
+                (base) -> initBytes(base, shorts, (addr, pos) -> addr.setAtIndex(BB_SHORT, pos, (short)(long)pos));
         Consumer<MemorySegment> intInitializer =
-                (base) -> initBytes(base, ints, (addr, pos) -> addr.setAtIndex(JAVA_INT.withOrder(ByteOrder.BIG_ENDIAN), pos, (int)(long)pos));
+                (base) -> initBytes(base, ints, (addr, pos) -> addr.setAtIndex(BB_INT, pos, (int)(long)pos));
         Consumer<MemorySegment> floatInitializer =
-                (base) -> initBytes(base, floats, (addr, pos) -> addr.setAtIndex(JAVA_FLOAT.withOrder(ByteOrder.BIG_ENDIAN), pos, (float)(long)pos));
+                (base) -> initBytes(base, floats, (addr, pos) -> addr.setAtIndex(BB_FLOAT, pos, (float)(long)pos));
         Consumer<MemorySegment> longInitializer =
-                (base) -> initBytes(base, longs, (addr, pos) -> addr.setAtIndex(JAVA_LONG.withOrder(ByteOrder.BIG_ENDIAN), pos, (long)pos));
+                (base) -> initBytes(base, longs, (addr, pos) -> addr.setAtIndex(BB_LONG, pos, (long)pos));
         Consumer<MemorySegment> doubleInitializer =
-                (base) -> initBytes(base, doubles, (addr, pos) -> addr.setAtIndex(JAVA_DOUBLE.withOrder(ByteOrder.BIG_ENDIAN), pos, (double)(long)pos));
+                (base) -> initBytes(base, doubles, (addr, pos) -> addr.setAtIndex(BB_DOUBLE, pos, (double)(long)pos));
 
         Consumer<MemorySegment> byteChecker =
                 (base) -> checkBytes(base, bytes, Function.identity(), (addr, pos) -> addr.get(JAVA_BYTE, pos), ByteBuffer::get);
         Consumer<MemorySegment> charChecker =
-                (base) -> checkBytes(base, chars, ByteBuffer::asCharBuffer, (addr, pos) -> addr.getAtIndex(JAVA_CHAR.withOrder(ByteOrder.BIG_ENDIAN), pos), CharBuffer::get);
+                (base) -> checkBytes(base, chars, ByteBuffer::asCharBuffer, (addr, pos) -> addr.getAtIndex(BB_CHAR, pos), CharBuffer::get);
         Consumer<MemorySegment> shortChecker =
-                (base) -> checkBytes(base, shorts, ByteBuffer::asShortBuffer, (addr, pos) -> addr.getAtIndex(JAVA_SHORT.withOrder(ByteOrder.BIG_ENDIAN), pos), ShortBuffer::get);
+                (base) -> checkBytes(base, shorts, ByteBuffer::asShortBuffer, (addr, pos) -> addr.getAtIndex(BB_SHORT, pos), ShortBuffer::get);
         Consumer<MemorySegment> intChecker =
-                (base) -> checkBytes(base, ints, ByteBuffer::asIntBuffer, (addr, pos) -> addr.getAtIndex(JAVA_INT.withOrder(ByteOrder.BIG_ENDIAN), pos), IntBuffer::get);
+                (base) -> checkBytes(base, ints, ByteBuffer::asIntBuffer, (addr, pos) -> addr.getAtIndex(BB_INT, pos), IntBuffer::get);
         Consumer<MemorySegment> floatChecker =
-                (base) -> checkBytes(base, floats, ByteBuffer::asFloatBuffer, (addr, pos) -> addr.getAtIndex(JAVA_FLOAT.withOrder(ByteOrder.BIG_ENDIAN), pos), FloatBuffer::get);
+                (base) -> checkBytes(base, floats, ByteBuffer::asFloatBuffer, (addr, pos) -> addr.getAtIndex(BB_FLOAT, pos), FloatBuffer::get);
         Consumer<MemorySegment> longChecker =
-                (base) -> checkBytes(base, longs, ByteBuffer::asLongBuffer, (addr, pos) -> addr.getAtIndex(JAVA_LONG.withOrder(ByteOrder.BIG_ENDIAN), pos), LongBuffer::get);
+                (base) -> checkBytes(base, longs, ByteBuffer::asLongBuffer, (addr, pos) -> addr.getAtIndex(BB_LONG, pos), LongBuffer::get);
         Consumer<MemorySegment> doubleChecker =
-                (base) -> checkBytes(base, doubles, ByteBuffer::asDoubleBuffer, (addr, pos) -> addr.getAtIndex(JAVA_DOUBLE.withOrder(ByteOrder.BIG_ENDIAN), pos), DoubleBuffer::get);
+                (base) -> checkBytes(base, doubles, ByteBuffer::asDoubleBuffer, (addr, pos) -> addr.getAtIndex(BB_DOUBLE, pos), DoubleBuffer::get);
 
         return new Object[][]{
                 {byteChecker, byteInitializer, bytes},
@@ -918,9 +985,9 @@ public class TestByteBuffer {
 
     @DataProvider(name = "bufferSources")
     public static Object[][] bufferSources() {
-        Predicate<MemorySegment> heapTest = segment -> segment instanceof HeapMemorySegmentImpl;
-        Predicate<MemorySegment> nativeTest = segment -> segment instanceof NativeMemorySegmentImpl;
-        Predicate<MemorySegment> mappedTest = segment -> segment instanceof MappedMemorySegmentImpl;
+        Predicate<MemorySegment> heapTest = segment -> !segment.isNative() && !segment.isMapped();
+        Predicate<MemorySegment> nativeTest = segment -> segment.isNative() && !segment.isMapped();
+        Predicate<MemorySegment> mappedTest = segment -> segment.isNative() && segment.isMapped();
         try (FileChannel channel = FileChannel.open(tempPath, StandardOpenOption.READ, StandardOpenOption.WRITE)) {
             return new Object[][]{
                     { ByteBuffer.wrap(new byte[256]), heapTest },
@@ -932,7 +999,7 @@ public class TestByteBuffer {
                     { ByteBuffer.allocate(256).asReadOnlyBuffer(), heapTest },
                     { ByteBuffer.allocateDirect(256).asReadOnlyBuffer(), nativeTest },
                     { channel.map(FileChannel.MapMode.READ_WRITE, 0L, 256).asReadOnlyBuffer(),
-                            nativeTest /* this seems to be an existing bug in the BB implementation */ }
+                            mappedTest }
             };
         } catch (IOException ex) {
             throw new ExceptionInInitializerError(ex);
@@ -949,7 +1016,7 @@ public class TestByteBuffer {
         BUFFER_FORCE(m -> ((MappedByteBuffer)m.asByteBuffer()).force());
 
 
-        private Consumer<MemorySegment> segmentOp;
+        private final Consumer<MemorySegment> segmentOp;
 
         MappedSegmentOp(Consumer<MemorySegment> segmentOp) {
             this.segmentOp = segmentOp;
@@ -964,6 +1031,43 @@ public class TestByteBuffer {
     public static Object[][] mappedOps() {
         return Stream.of(MappedSegmentOp.values())
                 .map(op -> new Object[] { op })
+                .toArray(Object[][]::new);
+    }
+
+    @DataProvider(name = "bufferFactories")
+    public static Object[][] bufferFactories() {
+        List<Supplier<Buffer>> l = List.of(
+                () -> ByteBuffer.allocate(10),
+                () -> CharBuffer.allocate(10),
+                () -> ShortBuffer.allocate(10),
+                () -> IntBuffer.allocate(10),
+                () -> FloatBuffer.allocate(10),
+                () -> LongBuffer.allocate(10),
+                () -> DoubleBuffer.allocate(10),
+                () -> ByteBuffer.allocateDirect(10),
+                () -> ByteBuffer.allocateDirect(10).asCharBuffer(),
+                () -> ByteBuffer.allocateDirect(10).asShortBuffer(),
+                () -> ByteBuffer.allocateDirect(10).asIntBuffer(),
+                () -> ByteBuffer.allocateDirect(10).asFloatBuffer(),
+                () -> ByteBuffer.allocateDirect(10).asLongBuffer(),
+                () -> ByteBuffer.allocateDirect(10).asDoubleBuffer()
+        );
+        return l.stream().map(s -> new Object[] { s }).toArray(Object[][]::new);
+
+    }
+    @DataProvider(name = "fromArrays")
+    public static Object[][] fromArrays() {
+        int len = 16;
+        return Stream.of(
+                        MemorySegment.ofArray(new byte[len]),
+                        MemorySegment.ofArray(new short[len]),
+                        MemorySegment.ofArray(new char[len]),
+                        MemorySegment.ofArray(new int[len]),
+                        MemorySegment.ofArray(new long[len]),
+                        MemorySegment.ofArray(new float[len]),
+                        MemorySegment.ofArray(new double[len])
+                )
+                .map(s -> new Object[] { s })
                 .toArray(Object[][]::new);
     }
 }
