@@ -47,16 +47,16 @@ public class bug8020708 {
 
     private static final Locale[] SUPPORTED_LOCALES = {
         Locale.ENGLISH,
-        new Locale("de"),
-        new Locale("es"),
-        new Locale("fr"),
-        new Locale("it"),
-        new Locale("ja"),
-        new Locale("ko"),
-        new Locale("pt", "BR"),
-        new Locale("sv"),
-        new Locale("zh", "CN"),
-        new Locale("zh", "TW")
+        Locale.of("de"),
+        Locale.of("es"),
+        Locale.of("fr"),
+        Locale.of("it"),
+        Locale.of("ja"),
+        Locale.of("ko"),
+        Locale.of("pt", "BR"),
+        Locale.of("sv"),
+        Locale.of("zh", "CN"),
+        Locale.of("zh", "TW")
     };
     private static final String[] LOOK_AND_FEELS = {
         "Nimbus",
