@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2018, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2018, 2025, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -34,7 +34,7 @@ import jdk.test.lib.Asserts;
 /**
  * @test
  * @summary Test ValueDescriptor.getAnnotations()
- * @key jfr
+ * @requires vm.flagless
  * @requires vm.hasJFR
  * @library /test/lib
  * @run main/othervm jdk.jfr.api.metadata.valuedescriptor.TestConstructor
@@ -59,7 +59,7 @@ public class TestConstructor {
 
         // Get labelA from getAnnotations() list
         Asserts.assertEquals(1, vdComplex.getAnnotationElements().size(), "Expected getAnnotations().size() == 1");
-        final AnnotationElement outAnnotation = vdComplex.getAnnotationElements().get(0);
+        final AnnotationElement outAnnotation = vdComplex.getAnnotationElements().getFirst();
         Asserts.assertNotNull(outAnnotation, "outAnnotation was null");
         System.out.printf("Annotation: %s = %s%n", outAnnotation.getTypeName(), outAnnotation.getValue("value"));
         Asserts.assertEquals(outAnnotation, labelA, "Expected firstAnnotation == labelA");
