@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2018, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2018, 2025, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -40,7 +40,7 @@ import jdk.test.lib.jfr.SimpleEventHelper;
 /**
  * @test
  * @summary Basic test for setDestination with disk=false
- * @key jfr
+ * @requires vm.flagless
  * @requires vm.hasJFR
  * @library /test/lib
  * @run main/othervm jdk.jfr.api.recording.destination.TestDestToDiskFalse
@@ -66,7 +66,7 @@ public class TestDestToDiskFalse {
 
         List<RecordedEvent> events = RecordingFile.readAllEvents(dest);
         Asserts.assertFalse(events.isEmpty(), "No event found");
-        System.out.printf("Found event %s%n", events.get(0).getEventType().getName());
+        System.out.printf("Found event %s%n", events.getFirst().getEventType().getName());
 
         assertEquals(r.getSize(), 0L, "getSize() should return 0, chunks should have been released at stop");
         // getDestination() should return null after recording have been written to file.
