@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2011, 2018, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2011, 2024, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -23,14 +23,13 @@
 
 /*
  * @test
- * @bug 6994008
+ * @bug 6994008 8289401
  * @summary basic test for RSA/ECB/NoPadding cipher
  * @author Valerie Peng
  * @library /test/lib ..
  * @key randomness
  * @modules jdk.crypto.cryptoki
  * @run main/othervm TestRawRSACipher
- * @run main/othervm -Djava.security.manager=allow TestRawRSACipher sm
  */
 
 import java.security.GeneralSecurityException;
@@ -38,8 +37,10 @@ import java.security.KeyPair;
 import java.security.KeyPairGenerator;
 import java.security.Provider;
 import java.util.Arrays;
+import java.util.HexFormat;
 import java.util.Random;
 import javax.crypto.Cipher;
+import jdk.test.lib.security.SecurityUtils;
 
 public class TestRawRSACipher extends PKCS11Test {
 
@@ -52,8 +53,9 @@ public class TestRawRSACipher extends PKCS11Test {
             return;
         }
 
-        final int KEY_LEN = 1024;
-        KeyPairGenerator kpGen = KeyPairGenerator.getInstance("RSA", p);
+        String kpgAlgorithm = "RSA";
+        final int KEY_LEN = SecurityUtils.getTestKeySize(kpgAlgorithm);
+        KeyPairGenerator kpGen = KeyPairGenerator.getInstance(kpgAlgorithm, p);
         kpGen.initialize(KEY_LEN);
         KeyPair kp = kpGen.generateKeyPair();
         Random random = new Random();
@@ -63,7 +65,8 @@ public class TestRawRSACipher extends PKCS11Test {
         plainText[0] = 0; // to ensure that it's less than modulus
 
         Cipher c1 = Cipher.getInstance("RSA/ECB/NoPadding", p);
-        Cipher c2 = Cipher.getInstance("RSA/ECB/NoPadding", "SunJCE");
+        Cipher c2 = Cipher.getInstance("RSA/ECB/NoPadding",
+                        System.getProperty("test.provider.name", "SunJCE"));
 
         c1.init(Cipher.ENCRYPT_MODE, kp.getPublic());
         c2.init(Cipher.DECRYPT_MODE, kp.getPrivate());
@@ -71,6 +74,9 @@ public class TestRawRSACipher extends PKCS11Test {
         cipherText = c1.doFinal(plainText);
         recoveredText = c2.doFinal(cipherText);
         if (!Arrays.equals(plainText, recoveredText)) {
+            System.out.println("*** E/D Test:");
+            System.out.println("\tplainText = " + HexFormat.of().formatHex(plainText));
+            System.out.println("\trecoveredText = " + HexFormat.of().formatHex(recoveredText));
             throw new RuntimeException("E/D Test against SunJCE Failed!");
         }
 
@@ -79,6 +85,9 @@ public class TestRawRSACipher extends PKCS11Test {
         cipherText = c2.doFinal(plainText);
         recoveredText = c1.doFinal(cipherText);
         if (!Arrays.equals(plainText, recoveredText)) {
+            System.out.println("*** D/E Test:");
+            System.out.println("\tplainText = " + HexFormat.of().formatHex(plainText));
+            System.out.println("\trecoveredText = " + HexFormat.of().formatHex(recoveredText));
             throw new RuntimeException("D/E Test against SunJCE Failed!");
         }
 
