@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2021, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2021, 2022, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -23,7 +23,7 @@
 
 /*
  * @test
- * @bug 8269146
+ * @bug 8269146 8290709
  * @summary Check compilation outcomes for various combinations of case label element.
  * @library /tools/lib /tools/javac/lib
  * @modules
@@ -85,17 +85,14 @@ public class CaseStructureTest extends ComboInstance<CaseStructureTest> {
     protected void doWork() throws Throwable {
         String labelSeparator = asCaseLabelElements ? ", " : ": case ";
         String labels = Arrays.stream(caseLabels).filter(l -> l != CaseLabel.NONE).map(l -> l.code).collect(Collectors.joining(labelSeparator, "case ", ": break;"));
-        boolean hasDefault = Arrays.stream(caseLabels).anyMatch(l -> l == CaseLabel.DEFAULT || l == CaseLabel.TYPE_PATTERN || l == CaseLabel.PARENTHESIZED_PATTERN);
+        boolean hasDefault = Arrays.stream(caseLabels).anyMatch(l -> l == CaseLabel.DEFAULT || l == CaseLabel.TYPE_PATTERN);
 
         ComboTask task = newCompilationTask()
-                .withSourceFromTemplate(MAIN_TEMPLATE.replace("#{CASES}", labels).replace("#{DEFAULT}", hasDefault ? "" : "default: break;"))
-                .withOption("--enable-preview")
-                .withOption("-source").withOption(JAVA_VERSION);
+                .withSourceFromTemplate(MAIN_TEMPLATE.replace("#{CASES}", labels).replace("#{DEFAULT}", hasDefault ? "" : "default: break;"));
 
         task.generate(result -> {
             boolean shouldPass = true;
-            long patternCases = Arrays.stream(caseLabels).filter(l -> l == CaseLabel.TYPE_PATTERN || l == CaseLabel.GUARDED_PATTERN || l == CaseLabel.PARENTHESIZED_PATTERN).count();
-            long typePatternCases = Arrays.stream(caseLabels).filter(l -> l == CaseLabel.TYPE_PATTERN).count();
+            long patternCases = Arrays.stream(caseLabels).filter(l -> l == CaseLabel.TYPE_PATTERN).count();
             long constantCases = Arrays.stream(caseLabels).filter(l -> l == CaseLabel.CONSTANT).count();
             long nullCases = Arrays.stream(caseLabels).filter(l -> l == CaseLabel.NULL).count();
             long defaultCases = Arrays.stream(caseLabels).filter(l -> l == CaseLabel.DEFAULT).count();
@@ -105,30 +102,28 @@ public class CaseStructureTest extends ComboInstance<CaseStructureTest> {
             if (constantCases > 0) {
                 shouldPass &= patternCases == 0;
             }
+            if (defaultCases > 0) {
+                shouldPass &= asCaseLabelElements && nullCases > 0;
+            }
             if (defaultCases > 1) {
                 shouldPass &= false;
             }
             if (nullCases > 1) {
                 shouldPass &= false;
             }
-            if (nullCases > 0 && patternCases > 0) {
-                shouldPass &= patternCases == typePatternCases;
+            if (nullCases > 0) {
+                shouldPass &= patternCases == 0 && (constantCases == 0 || !asCaseLabelElements);
+                if (defaultCases > 0 && asCaseLabelElements) {
+                    int nullIndex = Arrays.asList(caseLabels).indexOf(CaseLabel.NULL);
+                    int defaultIndex = Arrays.asList(caseLabels).indexOf(CaseLabel.DEFAULT);
+                    shouldPass &= nullIndex < defaultIndex;
+                }
             }
             if (patternCases > 1) {
                 shouldPass &= false;
             }
             if (patternCases > 0 && defaultCases > 0) {
                 shouldPass &= false;
-            }
-            if (!asCaseLabelElements) {
-                //as an edge case, `case <total-pattern>: case null:` is prohibited:
-                boolean seenPattern = false;
-                for (CaseLabel label : caseLabels) {
-                    switch (label) {
-                        case NULL: if (seenPattern) shouldPass = false; break;
-                        case GUARDED_PATTERN, PARENTHESIZED_PATTERN, TYPE_PATTERN: seenPattern = true; break;
-                    }
-                }
             }
             if (!(shouldPass ^ result.hasErrors())) {
                 throw new AssertionError("Unexpected result: shouldPass=" + shouldPass + ", actual: " + !result.hasErrors() + ", info: " + result.compilationInfo());
@@ -139,8 +134,6 @@ public class CaseStructureTest extends ComboInstance<CaseStructureTest> {
     public enum CaseLabel implements ComboParameter {
         NONE(""),
         TYPE_PATTERN("Integer i"),
-        PARENTHESIZED_PATTERN("(Integer i)"),
-        GUARDED_PATTERN("Integer i && i > 0"),
         CONSTANT("1"),
         NULL("null"),
         DEFAULT("default");
