@@ -1,5 +1,5 @@
 //
-// Copyright (c) 2003, 2021, Oracle and/or its affiliates. All rights reserved.
+// Copyright (c) 2003, 2024, Oracle and/or its affiliates. All rights reserved.
 // DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
 //
 // This code is free software; you can redistribute it and/or modify it
@@ -31,6 +31,7 @@ import org.openjdk.jmh.infra.Blackhole;
 
 @OutputTimeUnit(TimeUnit.MILLISECONDS)
 @State(Scope.Thread)
+@Fork(jvmArgs = {"--add-modules=jdk.incubator.vector"})
 public class MaskQueryOperationsBenchmark {
     @Param({"128","256","512"})
     int bits;
@@ -155,4 +156,23 @@ public class MaskQueryOperationsBenchmark {
     public int testLastTrueLong(Blackhole bh) {
         return lmask.lastTrue();
     }
+
+    @Benchmark
+    public long testToLongByte(Blackhole bh) {
+        return bmask.toLong();
+    }
+
+    @Benchmark
+    public long testToLongShort(Blackhole bh) {
+        return smask.toLong();
+    }
+    @Benchmark
+    public long testToLongInt(Blackhole bh) {
+        return imask.toLong();
+    }
+    @Benchmark
+    public long testToLongLong(Blackhole bh) {
+        return lmask.toLong();
+    }
+
 }
